--- a/GreekHTML/Dionisus.html
+++ b/GreekHTML/Dionisus.html
@@ -7,20 +7,15 @@
     <title>Dionysus</title>
     <link rel="stylesheet" href="Aphodite.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
@@ -34,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/greekC.html" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้ากรีก</a>
+                        <a class="nav-link" href="../ChooseHTML/greekC.html">เทพเจ้ากรีก</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -58,7 +53,7 @@
         <div class="page2">
             <img src="../Full-Design/Zeus1.jpg" class="img-fluid">
             <div class="container-fluid">
-                     <div class="topic">เทพไดโอนิซัส เทพเจ้าแห่งไวน์องุ่นและน้ำเมา</div>
+                <div class="topic">เทพไดโอนิซัส เทพเจ้าแห่งไวน์องุ่นและน้ำเมา</div>
                 <div class="row">
                     <div class="col-sm">
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; “ไดโอนีซัส” เป็นเทพเจ้าแห่งไวน์ ผู้เป็นแรงบันดาลใจของความประเพณีความคลั่งและความปิติอย่างล้นเหลือ (ecstasy) และเป็นเทพองค์ล่าสุดในสิบสองเทพโอลิมปัส ที่มาของไดโอนีซุสไม่เป็นที่ทราบ แต่ตามตำนานว่าได้รับอิทธิพลมาจากต่างประเทศ
@@ -71,11 +66,15 @@
         <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
         <div class="container-fluid">
             <div class="boxtext2">
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>เทพไดโอไนซัส</b>เป็นที่รู้จักในอีกชื่อหนึ่งว่า แบคคัส เทพแห่งเมรัย และไวน์องุ่น เป็นบุตรของเทพซูสกับนางซิมิลี่ (นางเป็นมนุษย์ ธิดาแห่งกรุงเธป) เทพซูสได้แปลงกายเป็นมนุษย์รูปงามลงมาโลกมนุษย์ เพราะเกรงว่ามเหสีพระนางเฮร่าจะรู้เข้า และกลัวว่านางซิมิลี่จะเกรงกลัวในรัศมีของพระองค์ และในที่สุดก็ได้นางเป็นชายาอีกองค์ แต่แล้ว พระนางเฮร่าก็รู้เข้าจึงได้ทำการแปลงกายมาเป็นคนรับใช้ของนางซิมิลี่ เพื่อมาหลอกล่อให้นางอยากเห็นรูปร่างที่แท้จริงของเทพซุส
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>เทพไดโอไนซัส</b>เป็นที่รู้จักในอีกชื่อหนึ่งว่า แบคคัส เทพแห่งเมรัย และไวน์องุ่น เป็นบุตรของเทพซูสกับนางซิมิลี่ (นางเป็นมนุษย์ ธิดาแห่งกรุงเธป) เทพซูสได้แปลงกายเป็นมนุษย์รูปงามลงมาโลกมนุษย์ เพราะเกรงว่ามเหสีพระนางเฮร่าจะรู้เข้า
+                    และกลัวว่านางซิมิลี่จะเกรงกลัวในรัศมีของพระองค์ และในที่สุดก็ได้นางเป็นชายาอีกองค์ แต่แล้ว พระนางเฮร่าก็รู้เข้าจึงได้ทำการแปลงกายมาเป็นคนรับใช้ของนางซิมิลี่ เพื่อมาหลอกล่อให้นางอยากเห็นรูปร่างที่แท้จริงของเทพซุส
                 </p>
             </div>
             <div class="boxtext5">
-                <p>นางซิมิลี่ จึงได้ให้เทพซุสในรูปมนุษย์ ไปสาบานกับแม่น้ำสติ๊กซ์ ว่าจะให้ของขวัญแก่นาง แล้วนางซิมิลี่ ก็ให้เทพซุสเปลี่ยนร่างที่แท้จริงออกมา พระองค์เกรงว่า ถ้าให้นางเห็นร่างที่แท้จริงของพระองค์ จะทำให้นางซิมิลี่มอดไหม้ เพราะรัศมีของพระองค์ จึงบอกแก่นางซิมิลี่ว่าจะดูแลลูกในครรภ์ของนาง ส่วนนางก็จะได้รับของขวัญสมใจ แล้วพระองค์ก็ได้ เปลี่ยนร่างเป็นเทพซูส จากนั้นนางซิมิลี่ก็มอดไหม้ไป แต่บุตรของนางไม่เป็นอะไร เพราะเป็นบุตรแห่งเทพ จากนั้นเทพซุสจึงได้ให้พวกนิมฟ์ล นางไม้ ดูแลเทพไดโอไนซัส พวกนิมฟ์ล ได้สอนให้เทพไดโอไนซัสปลูกพืชต่างๆ โดยเฉพาะองุ่น ต่อมาพระองค์ได้ทดลองนำองุ่นไปหมักเอาไว้ และก็ได้ค้นพบ น้ำองุ่นที่รสชาติดีอย่างประหลาดที่ยิ่งดื่ม ยิ่งมึนเมา ยิ่งอยากดื่ม ยิ่งสนุกสนาน พระองค์จึงได้เผยแพร่การทำไวน์องุ่นไปทั่วแดน และต่อมาเทพซุสได้รับพระองค์ไปเป็นเทพโอลิมปัสอีกพระองค์ (เทพไดโอไนซัส และเทพีดิมีเตอร์ เป็นเทพแห่งความอุดมสมบูรณ์ ที่ชาวกรีกและโรมันให้ความเคารพบูชายิ่งนัก)
+                <p>นางซิมิลี่ จึงได้ให้เทพซุสในรูปมนุษย์ ไปสาบานกับแม่น้ำสติ๊กซ์ ว่าจะให้ของขวัญแก่นาง แล้วนางซิมิลี่ ก็ให้เทพซุสเปลี่ยนร่างที่แท้จริงออกมา พระองค์เกรงว่า ถ้าให้นางเห็นร่างที่แท้จริงของพระองค์ จะทำให้นางซิมิลี่มอดไหม้ เพราะรัศมีของพระองค์
+                    จึงบอกแก่นางซิมิลี่ว่าจะดูแลลูกในครรภ์ของนาง ส่วนนางก็จะได้รับของขวัญสมใจ แล้วพระองค์ก็ได้ เปลี่ยนร่างเป็นเทพซูส จากนั้นนางซิมิลี่ก็มอดไหม้ไป แต่บุตรของนางไม่เป็นอะไร เพราะเป็นบุตรแห่งเทพ จากนั้นเทพซุสจึงได้ให้พวกนิมฟ์ล นางไม้ ดูแลเทพไดโอไนซัส
+                    พวกนิมฟ์ล ได้สอนให้เทพไดโอไนซัสปลูกพืชต่างๆ โดยเฉพาะองุ่น ต่อมาพระองค์ได้ทดลองนำองุ่นไปหมักเอาไว้ และก็ได้ค้นพบ น้ำองุ่นที่รสชาติดีอย่างประหลาดที่ยิ่งดื่ม ยิ่งมึนเมา ยิ่งอยากดื่ม ยิ่งสนุกสนาน พระองค์จึงได้เผยแพร่การทำไวน์องุ่นไปทั่วแดน
+                    และต่อมาเทพซุสได้รับพระองค์ไปเป็นเทพโอลิมปัสอีกพระองค์ (เทพไดโอไนซัส และเทพีดิมีเตอร์ เป็นเทพแห่งความอุดมสมบูรณ์ ที่ชาวกรีกและโรมันให้ความเคารพบูชายิ่งนัก)
                 </p>
             </div>
         </div>
@@ -89,7 +88,8 @@
 
         <div class="boxtext4">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <b class="bold2">ไดโอนีซัสผู้เป็นเทพของการเกษตรกรรม</b>และการละคร นอกจากนั้นก็ยังรู้จักกันในนามว่า “ผู้ปลดปล่อย” (Liberator) ที่ปลดปล่อยส่วนลึกของตนเองโดยทำให้คลั่ง หรือให้มีความสุขอย่างล้นเหลือ หรือด้วยเหล้าองุ่น หน้าที่ของไดโอนีซัสคือเป็นผู้สร้างดนตรีออโลส (aulos) และยุติความกังวล นักวิชาการถกกันเรื่องความสัมพันธ์ระหว่างไดโอนีซัสกับ “คตินิยมเกี่ยวกับวิญญาณ” และความสามารถในการติดต่อระหว่างผู้ยังมีชีวิตอยู่และผู้ที่ตายไปแล้ว
+            <b class="bold2">ไดโอนีซัสผู้เป็นเทพของการเกษตรกรรม</b>และการละคร นอกจากนั้นก็ยังรู้จักกันในนามว่า “ผู้ปลดปล่อย” (Liberator) ที่ปลดปล่อยส่วนลึกของตนเองโดยทำให้คลั่ง หรือให้มีความสุขอย่างล้นเหลือ หรือด้วยเหล้าองุ่น หน้าที่ของไดโอนีซัสคือเป็นผู้สร้างดนตรีออโลส
+            (aulos) และยุติความกังวล นักวิชาการถกกันเรื่องความสัมพันธ์ระหว่างไดโอนีซัสกับ “คตินิยมเกี่ยวกับวิญญาณ” และความสามารถในการติดต่อระหว่างผู้ยังมีชีวิตอยู่และผู้ที่ตายไปแล้ว
 
 
         </div>
@@ -110,8 +110,7 @@
                 <label for="id2">
                     <img src="https://sv1.picz.in.th/images/2019/11/14/g2eIDt.jpg" alt="g2eIDt.jpg" border="0">
                 </label>
-                <img
-                    img src="https://sv1.picz.in.th/images/2019/11/14/g2eIDt.jpg" alt="g2eIDt.jpg" border="0">
+                <img img src="https://sv1.picz.in.th/images/2019/11/14/g2eIDt.jpg" alt="g2eIDt.jpg" border="0">
 
                 <input type="radio" name="slide_switch" id="id3" />
                 <label for="id3">
@@ -124,8 +123,7 @@
                     <img src="https://www.img.in.th/images/3702801c7e21a89e59fd7a3ef186be44.jpg"
                         width="100" />
                 </label>
-                <img
-                    src="https://www.img.in.th/images/3702801c7e21a89e59fd7a3ef186be44.jpg" />
+                <img src="https://www.img.in.th/images/3702801c7e21a89e59fd7a3ef186be44.jpg" />
 
 
                 <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
