--- a/GreekHTML/apollo.html
+++ b/GreekHTML/apollo.html
@@ -7,23 +7,18 @@
     <title>Apollo</title>
     <link rel="stylesheet" href="apollo.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-</script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-</script>
-<link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
 </head>
 
 
@@ -34,16 +29,16 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/greekC.html" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้ากรีก</a>
+                        <a class="nav-link" href="../ChooseHTML/greekC.html">เทพเจ้ากรีก</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -52,99 +47,97 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             <div class="home">
                 <img src="../Full-Design/Apollo.jpg" class="img-fluid">
             </div>
-        </div>
+    </div>
     </section>
     <section class="history" id="history">
         <div class="page2">
             <img src="../Full-Design/Zeus1.jpg" class="img-fluid">
             <div class="container-fluid">
-               <div class="topic text-center">อะพอลโล เทพแห่งแสงสว่าง และดวงอาทิตย์</div>
-               <div class="row">
-                <div class="col-sm">
-                    <p>อะพอลโล เป็นบุตรชายคนโตของมหาเทพซุส เป็นหนึ่งใน 12 เทพแห่งโอลิมปัส เป็นบุตรของซีอุส จอมเทพแห่งสวรรค์และนางเลโต อะพอลโลเป็นเทพแห่งแสงสว่าง หรือเทพแห่งดวงอาทิตย์ รวมถึงเป็นเทพแห่งสัจจะและการดนตรีด้วย 
-                    </p>
+                <div class="topic text-center">อะพอลโล เทพแห่งแสงสว่าง และดวงอาทิตย์</div>
+                <div class="row">
+                    <div class="col-sm">
+                        <p>อะพอลโล เป็นบุตรชายคนโตของมหาเทพซุส เป็นหนึ่งใน 12 เทพแห่งโอลิมปัส เป็นบุตรของซีอุส จอมเทพแห่งสวรรค์และนางเลโต อะพอลโลเป็นเทพแห่งแสงสว่าง หรือเทพแห่งดวงอาทิตย์ รวมถึงเป็นเทพแห่งสัจจะและการดนตรีด้วย
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
+    </section>
+    <div class="page3">
+        <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
+        <div class="container-fluid">
+            <div class="boxtext2">
+                <p><b>เทพอะพอลโลทรงเป็นเทพแห่งคีตศาสตร์</b> ด้วยพระองค์ชื่นชอบการเล่นพิณ ด้วยมีเหตุมาจากเทพเฮอร์เมสขโมยวัวของพระองค์ไปซ่อน เทพอะพอลโลจับได้ ท่านก็โกรธมากแต่กลับมาหายโกรธเพราะพิณที่เทพเฮอร์เมสเป็นคนประดิษฐ์เพราะมันบรรเลงได้เสียงที่ไพเราะ จึงเป็นที่โปรดปรานของพระองค์มาก
+                    พระองค์จึงยอมคืนดีด้วยเพื่อแลกกับพิณ
+                </p>
+            </div>
+            <div class="boxtext5">
+                <p> เทพเฮอร์เมสเป็นผู้ประดิษฐ์เครื่องพิณขึ้นมาเป็นพระองค์แรก ส่วนเทพีอธีน่าทรงประดิษฐ์ขลุ่ยขึ้นพระองค์แรกเช่นกัน เทพอะพอลโลทรงเล่นพิณได้เก่งและไพเราะมากจนวันหนึ่งมีเทพมาไซยาส์ซึ่งเป็นเทพแห่งธรรมชาติลักษณะคล้ายเทพแพนที่เป็นครึ่งเทพครึ่งแพะ
+                    มาขอประลองกับเทพอะพอลโล เทพอะพอลโลยอมรับคำประชัน ผลออกมาว่าเทพมาไซยาส์พ่ายแพ้ เทพอะพอลโลจึงจับถลกหนังเป็นการลงโทษ
+
+                </p>
+            </div>
+        </div>
     </div>
-</section>
-<div class="page3">
-    <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
-    <div class="container-fluid">
-        <div class="boxtext2">
-            <p><b>เทพอะพอลโลทรงเป็นเทพแห่งคีตศาสตร์</b>  ด้วยพระองค์ชื่นชอบการเล่นพิณ ด้วยมีเหตุมาจากเทพเฮอร์เมสขโมยวัวของพระองค์ไปซ่อน เทพอะพอลโลจับได้ ท่านก็โกรธมากแต่กลับมาหายโกรธเพราะพิณที่เทพเฮอร์เมสเป็นคนประดิษฐ์เพราะมันบรรเลงได้เสียงที่ไพเราะ จึงเป็นที่โปรดปรานของพระองค์มาก พระองค์จึงยอมคืนดีด้วยเพื่อแลกกับพิณ 
+
+    <div class="page4">
+        <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
+        <div class="boxtext3">
+            <img src="../Full-Design/God-png/apolloS.png" class="img-fluid">
+        </div>
+
+        <div class="boxtext4">
+            <p>
+                <b class="bold2">เทพอะพอลโล</b>ถือได้ว่าเป็นเทพเจ้าที่รูปงามและยังเจ้าชู้เหมือนกับเทพซีอุสผู้เป็นพระบิดา อะพอลโลมีน้องสาวฝาแฝดชื่อ อาร์เทมีสหรือ ไดอาน่า (ในโรมัน) ซึ่งเป็นเทพีแห่งดวงจันทร์คู่กัน อะพอลโลเป็นบุรุษหนุ่มรูปงาม มักเล่นดนตรีด้วยพิณ
+                และเชี่ยวชาญการใช้ธนูในสงครามกรุงทรอย อะพอลโลมีบทบาทเป็นเทพที่รักษาชายฝั่งเมืองทรอย ที่เมืองเดลฟี่มีเทวสถานบูชาอพอลโลอยู่
             </p>
         </div>
-        <div class="boxtext5">
-            <p>                  เทพเฮอร์เมสเป็นผู้ประดิษฐ์เครื่องพิณขึ้นมาเป็นพระองค์แรก ส่วนเทพีอธีน่าทรงประดิษฐ์ขลุ่ยขึ้นพระองค์แรกเช่นกัน เทพอะพอลโลทรงเล่นพิณได้เก่งและไพเราะมากจนวันหนึ่งมีเทพมาไซยาส์ซึ่งเป็นเทพแห่งธรรมชาติลักษณะคล้ายเทพแพนที่เป็นครึ่งเทพครึ่งแพะ มาขอประลองกับเทพอะพอลโล เทพอะพอลโลยอมรับคำประชัน ผลออกมาว่าเทพมาไซยาส์พ่ายแพ้ เทพอะพอลโลจึงจับถลกหนังเป็นการลงโทษ
-
-            </p>
-        </div>
     </div>
-</div>
+    <section class="pics" id="pics">
+        <div class="page6">
+            <img src="../Full-Design/Zeus4.jpg" class="img-fluid">
 
-<div class="page4">
-    <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
-    <div class="boxtext3">
-        <img src="../Full-Design/God-png/apolloS.png" class="img-fluid">
-    </div>
-
-    <div class="boxtext4">
-        <p>
-        <b
-        class="bold2">เทพอะพอลโล</b>ถือได้ว่าเป็นเทพเจ้าที่รูปงามและยังเจ้าชู้เหมือนกับเทพซีอุสผู้เป็นพระบิดา อะพอลโลมีน้องสาวฝาแฝดชื่อ อาร์เทมีสหรือ ไดอาน่า (ในโรมัน) ซึ่งเป็นเทพีแห่งดวงจันทร์คู่กัน  อะพอลโลเป็นบุรุษหนุ่มรูปงาม มักเล่นดนตรีด้วยพิณ และเชี่ยวชาญการใช้ธนูในสงครามกรุงทรอย อะพอลโลมีบทบาทเป็นเทพที่รักษาชายฝั่งเมืองทรอย ที่เมืองเดลฟี่มีเทวสถานบูชาอพอลโลอยู่
-    </p>
-    </div>
-</div>
-<section class="pics" id="pics">
-    <div class="page6">
-        <img src="../Full-Design/Zeus4.jpg" class="img-fluid">
-
-        <div class="slider">
-            <input type="radio" name="slide_switch" id="id1" />
-            <label for="id1">
+            <div class="slider">
+                <input type="radio" name="slide_switch" id="id1" />
+                <label for="id1">
                 <img src="https://i.imgur.com/fJxsnjN.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/fJxsnjN.jpg" />
+                <img src="https://i.imgur.com/fJxsnjN.jpg" />
 
-            <!--Lets show the second image by default on page load-->
-            <input type="radio" name="slide_switch" id="id2" checked="checked" />
-            <label for="id2">
+                <!--Lets show the second image by default on page load-->
+                <input type="radio" name="slide_switch" id="id2" checked="checked" />
+                <label for="id2">
                 <img src="https://i.imgur.com/yOWvNqF.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/yOWvNqF.jpg" />
+                <img src="https://i.imgur.com/yOWvNqF.jpg" />
 
-            <input type="radio" name="slide_switch" id="id3" />
-            <label for="id3">
+                <input type="radio" name="slide_switch" id="id3" />
+                <label for="id3">
                 <img src="https://i.imgur.com/OwfnEof.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/OwfnEof.jpg" />
+                <img src="https://i.imgur.com/OwfnEof.jpg" />
 
-            <input type="radio" name="slide_switch" id="id4" />
-            <label for="id4">
+                <input type="radio" name="slide_switch" id="id4" />
+                <label for="id4">
                 <img src="https://i.imgur.com/3KdaBGY.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/3KdaBGY.jpg" />
+                <img src="https://i.imgur.com/3KdaBGY.jpg" />
 
 
                 <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
                     You can download it from https://leaverou.github.com/prefixfree/ -->
-                    <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>
+                <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>
 
-                </div>
-            </section>
-            <div class="page7">
-                <img src="../Full-Design/downZeus.jpg" class="img-fluid">
             </div>
+    </section>
+    <div class="page7">
+        <img src="../Full-Design/downZeus.jpg" class="img-fluid">
+    </div>
 
-        </body>
+</body>
 
-        </html>
+</html>
