--- a/GreekHTML/demeter.html
+++ b/GreekHTML/demeter.html
@@ -7,23 +7,18 @@
     <title>Demeter</title>
     <link rel="stylesheet" href="demeter.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-</script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-</script>
-<link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
 </head>
 
 
@@ -34,16 +29,16 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/greekC.html" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้ากรีก</a>
+                        <a class="nav-link" href="../ChooseHTML/greekC.html">เทพเจ้ากรีก</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -52,99 +47,97 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             <div class="home">
                 <img src="../Full-Design/Demeter.jpg" class="img-fluid">
             </div>
-        </div>
+    </div>
     </section>
     <section class="history" id="history">
         <div class="page2">
             <img src="../Full-Design/Zeus1.jpg" class="img-fluid">
             <div class="container-fluid">
-               <div class="topic">ดีมีเทอร์ เทพีแห่งความอุดมสมบูรณ์</div>
-               <div class="row">
-                <div class="col-sm">
-                    <p>เป็นธิดาองค์ที่2 ของโครนัส และรีอา นางเป็นเทพีแห่งความอุดมสมบูรณ์ และการเก็บเกี่ยว นางมักจะปรากฏตัวพร้อมกับดอกไม้ ผลไม้ และเมล็ดธัญญาหาร ต่อมาได้กลายเป็นชายาของเทพซูส และมีธิดา คือ เพอร์เซโฟนี (Persephone)  เป็นเทวีครองฤดูผลิตผลของพืชทั้งปวง เพื่ออธิบายธรรมชาติของการผลัดฤดู กวีกรีกโบราณจึงผูกเรื่องให้เทวีองค์นี้ถูกฮาเดสลักพาตัวไปเป็นคู่ครองในยมโลก 
-                    </p>
+                <div class="topic">ดีมีเทอร์ เทพีแห่งความอุดมสมบูรณ์</div>
+                <div class="row">
+                    <div class="col-sm">
+                        <p>เป็นธิดาองค์ที่2 ของโครนัส และรีอา นางเป็นเทพีแห่งความอุดมสมบูรณ์ และการเก็บเกี่ยว นางมักจะปรากฏตัวพร้อมกับดอกไม้ ผลไม้ และเมล็ดธัญญาหาร ต่อมาได้กลายเป็นชายาของเทพซูส และมีธิดา คือ เพอร์เซโฟนี (Persephone) เป็นเทวีครองฤดูผลิตผลของพืชทั้งปวง
+                            เพื่ออธิบายธรรมชาติของการผลัดฤดู กวีกรีกโบราณจึงผูกเรื่องให้เทวีองค์นี้ถูกฮาเดสลักพาตัวไปเป็นคู่ครองในยมโลก
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
+    </section>
+    <div class="page3">
+        <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
+        <div class="container-fluid">
+            <div class="boxtext2">
+                <p><b>ฮาเดสปกครองยมโลกอยู่คนเดียว</b> โดดเดี่ยวไร้คู่ปฏิพัทธ์มาเป็นเวลานานหามีเทวีองค์ใดไยดีที่จะร่วมเทวบัลลังก์กับเขา เทวีแต่ละองค์ที่เขาทอดเสน่หาต่างองค์ต่างก็ไม่สมัครรักใคร่เขา ด้วยความไม่ปรารถนาจะลงไปอยู่ในใต้หล้าแดนบาดาลทำให้เขามึนตึงหมางหทัยนัก
+                    ในที่สุดจึงต้องตั้งปณิธานจะไม่ทอดเสน่หาใครอีกเป็นอันขาด หากปฏิพัทธ์สวาทกับใครก็จะฉุดคร่าพาเอาลงไปบาดาลดื้อ ๆ
+                </p>
+            </div>
+            <div class="boxtext5">
+                <p> วันหนึ่งเพอร์เซโฟนีพร้อมเพื่อนเล่นทั้งมวลชวนกันลงเที่ยวสวนดอกไม้ บังเอิญฮาเดสขับรถทรงแล่นผ่านมาทางนั้น ได้ยินสรวลสรรหรรษาร่าเริงระครเสียงขับร้องของเหล่านางอัปสรสาวสวรรค์ลอยมา เขาจึงหยุดรถทรงลงไปเยี่ยมมองทางช่องสุมทุมพุ่มไม้ ครั้นพบเทวีรุ่นสะคราญทรงโฉม
+                    วิลาสลิไลนักทำให้นึกรักจะเอาไปไว้ในยมโลก เขาจึงก้าวกระชากชิงอุ้มเพอร์เซโฟนีเทวีขึ้นรถไปในทันที
+
+                </p>
+            </div>
+        </div>
     </div>
-</section>
-<div class="page3">
-    <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
-    <div class="container-fluid">
-        <div class="boxtext2">
-            <p><b>ฮาเดสปกครองยมโลกอยู่คนเดียว</b> โดดเดี่ยวไร้คู่ปฏิพัทธ์มาเป็นเวลานานหามีเทวีองค์ใดไยดีที่จะร่วมเทวบัลลังก์กับเขา  เทวีแต่ละองค์ที่เขาทอดเสน่หาต่างองค์ต่างก็ไม่สมัครรักใคร่เขา  ด้วยความไม่ปรารถนาจะลงไปอยู่ในใต้หล้าแดนบาดาลทำให้เขามึนตึงหมางหทัยนัก  ในที่สุดจึงต้องตั้งปณิธานจะไม่ทอดเสน่หาใครอีกเป็นอันขาด  หากปฏิพัทธ์สวาทกับใครก็จะฉุดคร่าพาเอาลงไปบาดาลดื้อ ๆ
+
+    <div class="page4">
+        <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
+        <div class="boxtext3">
+            <img src="../Full-Design/God-png/demeterS.png" class="img-fluid">
+        </div>
+
+        <div class="boxtext4">
+            <p>
+                <b class="bold2">แม่นางดิมีเทอร์</b>โศรกเศร้ามากเกี่ยวกับเรื่องนี้จึงทำให้พืชผลไม่ผลิตงอกงาม นั่นเลยกลายเป็นต้นกำเนิดของฤดูหนาว และมีการเชื่อกันว่านางได้สอนให้ชาวกรีกโบราณรู้จักศิลปะของการปลูกพืชผล เพื่อพวกเขาจะสามารถดำรงชีวิตอยู่ได้ด้วยการเพาะปลูกและมีอารยธรรมขึ้นมา
             </p>
         </div>
-        <div class="boxtext5">
-            <p>                  วันหนึ่งเพอร์เซโฟนีพร้อมเพื่อนเล่นทั้งมวลชวนกันลงเที่ยวสวนดอกไม้  บังเอิญฮาเดสขับรถทรงแล่นผ่านมาทางนั้น  ได้ยินสรวลสรรหรรษาร่าเริงระครเสียงขับร้องของเหล่านางอัปสรสาวสวรรค์ลอยมา  เขาจึงหยุดรถทรงลงไปเยี่ยมมองทางช่องสุมทุมพุ่มไม้ ครั้นพบเทวีรุ่นสะคราญทรงโฉม วิลาสลิไลนักทำให้นึกรักจะเอาไปไว้ในยมโลก  เขาจึงก้าวกระชากชิงอุ้มเพอร์เซโฟนีเทวีขึ้นรถไปในทันที
-
-            </p>
-        </div>
     </div>
-</div>
+    <section class="pics" id="pics">
+        <div class="page6">
+            <img src="../Full-Design/Zeus4.jpg" class="img-fluid">
 
-<div class="page4">
-    <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
-    <div class="boxtext3">
-        <img src="../Full-Design/God-png/demeterS.png" class="img-fluid">
-    </div>
-
-    <div class="boxtext4">
-        <p>
-        <b
-        class="bold2">แม่นางดิมีเทอร์</b>โศรกเศร้ามากเกี่ยวกับเรื่องนี้จึงทำให้พืชผลไม่ผลิตงอกงาม นั่นเลยกลายเป็นต้นกำเนิดของฤดูหนาว และมีการเชื่อกันว่านางได้สอนให้ชาวกรีกโบราณรู้จักศิลปะของการปลูกพืชผล เพื่อพวกเขาจะสามารถดำรงชีวิตอยู่ได้ด้วยการเพาะปลูกและมีอารยธรรมขึ้นมา
-    </p>
-    </div>
-</div>
-<section class="pics" id="pics">
-    <div class="page6">
-        <img src="../Full-Design/Zeus4.jpg" class="img-fluid">
-
-        <div class="slider">
-            <input type="radio" name="slide_switch" id="id1" />
-            <label for="id1">
+            <div class="slider">
+                <input type="radio" name="slide_switch" id="id1" />
+                <label for="id1">
                 <img src="https://i.imgur.com/C9O39lH.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/C9O39lH.jpg" />
+                <img src="https://i.imgur.com/C9O39lH.jpg" />
 
-            <!--Lets show the second image by default on page load-->
-            <input type="radio" name="slide_switch" id="id2" checked="checked" />
-            <label for="id2">
+                <!--Lets show the second image by default on page load-->
+                <input type="radio" name="slide_switch" id="id2" checked="checked" />
+                <label for="id2">
                 <img src="https://i.imgur.com/C6qthZq.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/C6qthZq.jpg" />
+                <img src="https://i.imgur.com/C6qthZq.jpg" />
 
-            <input type="radio" name="slide_switch" id="id3" />
-            <label for="id3">
+                <input type="radio" name="slide_switch" id="id3" />
+                <label for="id3">
                 <img src="https://i.imgur.com/DcSBwNJ.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/DcSBwNJ.jpg" />
+                <img src="https://i.imgur.com/DcSBwNJ.jpg" />
 
-            <input type="radio" name="slide_switch" id="id4" />
-            <label for="id4">
+                <input type="radio" name="slide_switch" id="id4" />
+                <label for="id4">
                 <img src="https://i.imgur.com/CTkh1By.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/CTkh1By.jpg" />
+                <img src="https://i.imgur.com/CTkh1By.jpg" />
 
 
                 <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
                     You can download it from https://leaverou.github.com/prefixfree/ -->
-                    <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>
+                <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>
 
-                </div>
-            </section>
-            <div class="page7">
-                <img src="../Full-Design/downZeus.jpg" class="img-fluid">
             </div>
+    </section>
+    <div class="page7">
+        <img src="../Full-Design/downZeus.jpg" class="img-fluid">
+    </div>
 
-        </body>
+</body>
 
-        </html>
+</html>
