--- a/GreekHTML/hera.html
+++ b/GreekHTML/hera.html
@@ -7,23 +7,18 @@
     <title>Hera</title>
     <link rel="stylesheet" href="hera.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-</script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-</script>
-<link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
 </head>
 
 
@@ -34,16 +29,16 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics>รูปภาพ</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/greekC.html" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้ากรีก</a>
+                    <li class=" nav-item ">
+                        <a class="nav-link " href="../ChooseHTML/greekC.html ">เทพเจ้ากรีก</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                    <li class="nav-item ">
+                        <a class="nav-link " href="../index.html>หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -52,98 +47,96 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             <div class="home">
                 <img src="../Full-Design/Hera.jpg" class="img-fluid">
             </div>
-        </div>
+    </div>
     </section>
     <section class="history" id="history">
         <div class="page2">
             <img src="../Full-Design/Zeus1.jpg" class="img-fluid">
             <div class="container-fluid">
-               <div class="topic">เฮรา เทพีแห่งหญิงสาวและชีวิตสมรส</div>
-               <div class="row">
-                <div class="col-sm">
-                    <p>เฮราเป็นบุตรองค์ที่ 3 ของโครนัส และ รีอา พระนางถูกโครนัสกลืนลงท้องไปตั้งแต่เพิ่งถือกำเนิดเนื่องจากคำสาปของไกอาที่ว่าบุตรของโครนัสจะโค่นอำนาจของโครนัสเหมือนกับที่โครนัสได้โค่นอำนาจของยูเรนัส แต่ต่อมาเทพีรีอาได้ซ่อนซูส ผู้เป็นบุตรองค์สุดท้องไว้และได้นำซูสกลับมาเพื่อแก้แค้นโครนัส และนำพี่ๆที่ถูกกลืนเข้าไปอยู่ในท้องของโครนัสออกมา เทพีเฮราจึงปรากฏกายขึ้น เชื่อกันว่าเทพีเฮราถูกเลี้ยงดูมาโดยไททันทีธิส และมหากาพย์อิเลียด      
-                    </p>
+                <div class="topic">เฮรา เทพีแห่งหญิงสาวและชีวิตสมรส</div>
+                <div class="row">
+                    <div class="col-sm">
+                        <p>เฮราเป็นบุตรองค์ที่ 3 ของโครนัส และ รีอา พระนางถูกโครนัสกลืนลงท้องไปตั้งแต่เพิ่งถือกำเนิดเนื่องจากคำสาปของไกอาที่ว่าบุตรของโครนัสจะโค่นอำนาจของโครนัสเหมือนกับที่โครนัสได้โค่นอำนาจของยูเรนัส แต่ต่อมาเทพีรีอาได้ซ่อนซูส ผู้เป็นบุตรองค์สุดท้องไว้และได้นำซูสกลับมาเพื่อแก้แค้นโครนัส
+                            และนำพี่ๆที่ถูกกลืนเข้าไปอยู่ในท้องของโครนัสออกมา เทพีเฮราจึงปรากฏกายขึ้น เชื่อกันว่าเทพีเฮราถูกเลี้ยงดูมาโดยไททันทีธิส และมหากาพย์อิเลียด
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
+    </section>
+    <div class="page3">
+        <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
+        <div class="container-fluid">
+            <div class="boxtext2">
+                <p><b>เฮราเป็นมเหสีและเชษฐภคินี</b>(พี่สาว) ของซูส พระนางเป็นเทพีแห่งหญิงสาวและชีวิตสมรส เป็นผู้ปกป้องสตรีที่แต่งงานแล้ว พระนางทรงประทับบนพระบัลลังก์ทองคำเคียงข้างซูสบนภูเขาโอลิมปัส และทรงพยายามอย่างที่สุดที่จะไม่ใส่พระทัยกับเรื่องราวรักๆ
+                    ใคร่ๆ ที่ไม่ถูกทำนองคลองธรรมของสวามี
+                </p>
+            </div>
+            <div class="boxtext5">
+                <p>เฮราได้รับการกล่าวขานว่าเป็นเทพธิดาผู้มีพระกรใสกระจ่างดุจงาช้าง ในตำนานโบราณสัตว์ประจำองค์ของเทพีเฮราคือวัว แต่ในตำนานยุคใหม่นกยูงเป็นสัตว์ศักดิ์สิทธิ์ประจำพระองค์ และจะตามเสด็จอยู่ไม่ห่าง
+                </p>
+            </div>
+        </div>
     </div>
-</section>
-<div class="page3">
-    <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
-    <div class="container-fluid">
-        <div class="boxtext2">
-            <p><b>เฮราเป็นมเหสีและเชษฐภคินี</b>(พี่สาว) ของซูส พระนางเป็นเทพีแห่งหญิงสาวและชีวิตสมรส เป็นผู้ปกป้องสตรีที่แต่งงานแล้ว พระนางทรงประทับบนพระบัลลังก์ทองคำเคียงข้างซูสบนภูเขาโอลิมปัส และทรงพยายามอย่างที่สุดที่จะไม่ใส่พระทัยกับเรื่องราวรักๆ ใคร่ๆ ที่ไม่ถูกทำนองคลองธรรมของสวามี 
+
+    <div class="page4">
+        <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
+        <div class="boxtext3">
+            <img src="../Full-Design/God-png/heraS.png" class="img-fluid">
+        </div>
+
+        <div class="boxtext4">
+            <p>
+                <b class="bold2">เทพีเฮราเป็นที่รู้จักกันดีในด้านของอารมณ์ดุร้าย</b>โดยเฉพาะอย่างยิ่งต่อชายาองค์อื่นๆของซูส และบุตรที่เกิดจากชายาเหล่านั้น ไม่ว่าพวกนางจะเป็นเทพีหรือเป็นมนุษย์ก็ตาม ตัวอย่างของผู้ที่ถูกเทพีเฮราปองร้ายมีมากมาย เช่น เทพีลีโต
+                มารดาของเทพอพอลโล่ และ เทพีอาร์ทีมิส เฮอร์คิวลิส ไอโอ ลามิอา เกรานา ซิมิลี มารดาของเทพไดโอนิซัส ยูโรปา เป็นต้น ก็จะเจอจุดจบแบบไม่สวยงาม
             </p>
         </div>
-        <div class="boxtext5">
-            <p>เฮราได้รับการกล่าวขานว่าเป็นเทพธิดาผู้มีพระกรใสกระจ่างดุจงาช้าง ในตำนานโบราณสัตว์ประจำองค์ของเทพีเฮราคือวัว แต่ในตำนานยุคใหม่นกยูงเป็นสัตว์ศักดิ์สิทธิ์ประจำพระองค์ และจะตามเสด็จอยู่ไม่ห่าง
-            </p>
-        </div>
     </div>
-</div>
+    <section class="pics" id="pics">
+        <div class="page6">
+            <img src="../Full-Design/Zeus4.jpg" class="img-fluid">
 
-<div class="page4">
-    <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
-    <div class="boxtext3">
-        <img src="../Full-Design/God-png/heraS.png" class="img-fluid">
-    </div>
-
-    <div class="boxtext4">
-        <p>
-        <b
-        class="bold2">เทพีเฮราเป็นที่รู้จักกันดีในด้านของอารมณ์ดุร้าย</b>โดยเฉพาะอย่างยิ่งต่อชายาองค์อื่นๆของซูส และบุตรที่เกิดจากชายาเหล่านั้น ไม่ว่าพวกนางจะเป็นเทพีหรือเป็นมนุษย์ก็ตาม ตัวอย่างของผู้ที่ถูกเทพีเฮราปองร้ายมีมากมาย เช่น เทพีลีโต มารดาของเทพอพอลโล่ และ เทพีอาร์ทีมิส เฮอร์คิวลิส ไอโอ ลามิอา เกรานา ซิมิลี มารดาของเทพไดโอนิซัส ยูโรปา เป็นต้น ก็จะเจอจุดจบแบบไม่สวยงาม
-    </p>
-    </div>
-</div>
-<section class="pics" id="pics">
-    <div class="page6">
-        <img src="../Full-Design/Zeus4.jpg" class="img-fluid">
-
-        <div class="slider">
-            <input type="radio" name="slide_switch" id="id1" />
-            <label for="id1">
+            <div class="slider">
+                <input type="radio" name="slide_switch" id="id1" />
+                <label for="id1">
                 <img src="https://i.imgur.com/Ul6hdnL.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/Ul6hdnL.jpg" />
+                <img src="https://i.imgur.com/Ul6hdnL.jpg" />
 
-            <!--Lets show the second image by default on page load-->
-            <input type="radio" name="slide_switch" id="id2" checked="checked" />
-            <label for="id2">
+                <!--Lets show the second image by default on page load-->
+                <input type="radio" name="slide_switch" id="id2" checked="checked" />
+                <label for="id2">
                 <img src="https://i.imgur.com/eMpDDAD.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/eMpDDAD.jpg" />
+                <img src="https://i.imgur.com/eMpDDAD.jpg" />
 
-            <input type="radio" name="slide_switch" id="id3" />
-            <label for="id3">
+                <input type="radio" name="slide_switch" id="id3" />
+                <label for="id3">
                 <img src="https://i.imgur.com/xKSp3tv.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/xKSp3tv.jpg" />
+                <img src="https://i.imgur.com/xKSp3tv.jpg" />
 
-            <input type="radio" name="slide_switch" id="id4" />
-            <label for="id4">
+                <input type="radio" name="slide_switch" id="id4" />
+                <label for="id4">
                 <img src="https://i.imgur.com/TMFdv4q.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/TMFdv4q.jpg" />
+                <img src="https://i.imgur.com/TMFdv4q.jpg" />
 
 
                 <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
                     You can download it from https://leaverou.github.com/prefixfree/ -->
-                    <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>
+                <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>
 
-                </div>
-            </section>
-            <div class="page7">
-                <img src="../Full-Design/downZeus.jpg" class="img-fluid">
             </div>
+    </section>
+    <div class="page7">
+        <img src="../Full-Design/downZeus.jpg" class="img-fluid">
+    </div>
 
-        </body>
+</body>
 
-        </html>
+</html>
