--- a/NorseHTML/baldr.html
+++ b/NorseHTML/baldr.html
@@ -7,20 +7,15 @@
     <title>Baldr</title>
     <link rel="stylesheet" href="baldr.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
@@ -34,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/NorseC.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้านอร์ส</a>
+                        <a class="nav-link" href="../ChooseHTML/NorseC.html">เทพเจ้านอร์ส</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -64,20 +59,12 @@
             <img src="../Full-Design/Odin1.jpg" class="img-fluid">
             <div class="container-fluid">
                 <div class="boxtext1">
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Baldr</b> เทพแห่งสัจธรรมและความดีงาม บุตรแห่งโอดินกับเทพี ฟริกก้า
-                        เทพบัลเดอร์มักปรากฏในรูปเทพบุรุษรูปงาม มีรัศมีเจิดจ้าส่องประกายออกมาจากร่าง มีตำนานเล่าว่า
-                        ครั้งหนึ่งมีคำทำนายว่าเทพ บัลเดอร์จะต้องตาย ทำให้
-                        เทพีฟริกก้าผู้เป็นมารดาเกิดความเดือดเนื้อร้อนใจเป็นอันมากจึงได้หาทางไม่ให้บุตรของตนต้องตาย
-                        เธอจึงเดินทางไปทุกหนทุกแห่งหนเพื่อร้องขอต่อสิ่งมีชีวิตและสิ่งไม่มีชีวิตทั้งหลายให้สาบานว่าจะไม่ทำร้ายบัลเดอร์
-                        แต่ฟริกก้าได้มองข้ามต้น มิสเซิลโทวัชพืชที่ขึ้นอยู่รอบๆอาณาจักรของตนไป
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Baldr</b> เทพแห่งสัจธรรมและความดีงาม บุตรแห่งโอดินกับเทพี ฟริกก้า เทพบัลเดอร์มักปรากฏในรูปเทพบุรุษรูปงาม มีรัศมีเจิดจ้าส่องประกายออกมาจากร่าง มีตำนานเล่าว่า ครั้งหนึ่งมีคำทำนายว่าเทพ บัลเดอร์จะต้องตาย ทำให้
+                        เทพีฟริกก้าผู้เป็นมารดาเกิดความเดือดเนื้อร้อนใจเป็นอันมากจึงได้หาทางไม่ให้บุตรของตนต้องตาย เธอจึงเดินทางไปทุกหนทุกแห่งหนเพื่อร้องขอต่อสิ่งมีชีวิตและสิ่งไม่มีชีวิตทั้งหลายให้สาบานว่าจะไม่ทำร้ายบัลเดอร์ แต่ฟริกก้าได้มองข้ามต้น มิสเซิลโทวัชพืชที่ขึ้นอยู่รอบๆอาณาจักรของตนไป
                         โลกิเกิดความคิดพิเรนทร์ขึ้น
-                        <br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;<b>โลกิจึง</b> รีบนำมิสเทิลโทมาแปลงเป็นลูกศร
-                        แล้วไปหลอกให้โฮเดอร์น้องชายตาบอดของบัลเดอร์ปาลูกศรแปลงไปปักกลางหัวใจของบัลเดอร์พอดีและทำให้เขาเสียชีวิต
-                        และเมื่อเทพเฮลมอดได้ไปตกลงกับเฮล-เทพีแห่งความตาย ให้นางชุบชีวิตบัลเดอร์ให้
-                        ซึ่งนางจะยอมให้บัลเดอร์กลับจากยมโลกถ้าทุกชีวิตบนโลกร่ำไห้แก่บัลเดอร์น นางยักษิณี ทอค
-                        ปฏิเสธที่จะร่ำไห้ตามคำขอร้องของแอนซัส ผู้ส่งสาร ซึ่งเชื่อว่าทอคนั้นก็คือโลกิปลอมตัวมานั่นเอง
-                        ซึ่งเหตุการณ์นี้เป็นจุดเริ่มต้นที่ทำให้โลกิเป็นศัตรูกับเหล่าเทพแห่งแอสการ์ดและถูกจับล่ามโซ่ไว้จนถึงวันแร็กนาร็อก
+                        <br> &nbsp;&nbsp;&nbsp;&nbsp;
+                        <b>โลกิจึง</b> รีบนำมิสเทิลโทมาแปลงเป็นลูกศร แล้วไปหลอกให้โฮเดอร์น้องชายตาบอดของบัลเดอร์ปาลูกศรแปลงไปปักกลางหัวใจของบัลเดอร์พอดีและทำให้เขาเสียชีวิต และเมื่อเทพเฮลมอดได้ไปตกลงกับเฮล-เทพีแห่งความตาย ให้นางชุบชีวิตบัลเดอร์ให้ ซึ่งนางจะยอมให้บัลเดอร์กลับจากยมโลกถ้าทุกชีวิตบนโลกร่ำไห้แก่บัลเดอร์น
+                        นางยักษิณี ทอค ปฏิเสธที่จะร่ำไห้ตามคำขอร้องของแอนซัส ผู้ส่งสาร ซึ่งเชื่อว่าทอคนั้นก็คือโลกิปลอมตัวมานั่นเอง ซึ่งเหตุการณ์นี้เป็นจุดเริ่มต้นที่ทำให้โลกิเป็นศัตรูกับเหล่าเทพแห่งแอสการ์ดและถูกจับล่ามโซ่ไว้จนถึงวันแร็กนาร็อก
                     </p>
                 </div>
             </div>
@@ -88,18 +75,9 @@
         <div class="container-fluid">
             <div class="boxtext2">
                 <p class="txtx" align="center"><b class="bold1">สรุปฉบับย่อ!!</b></p>
-                <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br>
-                    • เทพแห่งแสง ความจริง ความดี สันติภาพและความสุข <br>
-                    • เป็นลูกรักของโอดินกับฟริกก์ มีผมสีทอง <br>              
-                    • มีฝาแฝดคือโฮเดอร์ (Holdur) ซึ่งเป็นเทพตาบอด <br>
-                    • รูปงามที่สุดในแอสการ์ด <br>
-                    • เป็นที่รักของทุกคนทั้งเทพและยักษ์ ยกเว้นโลกิ <br>
-                    • มีลูกที่เกิดกับภรรยาชื่อนันนา (Nanna) คือฟอร์เซตี้ <br>
-                    • เป็นอมตะ <br>
-                    • อยู่ที่วังชื่อเบรดาเบลิค (Breidablik) <br>
-                    • โดนฆ่าด้วยหอกมิซเซิลโท <br>
-                    • จะฟื้นขึ้นมาอีกทีหลังแร็คนาร็อค <br>
-                    • มีเรือที่ถูกกล่าวว่าดีที่สุดชื่อ Hringhorni <br>
+                <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br> • เทพแห่งแสง ความจริง ความดี สันติภาพและความสุข <br> • เป็นลูกรักของโอดินกับฟริกก์ มีผมสีทอง <br> • มีฝาแฝดคือโฮเดอร์ (Holdur) ซึ่งเป็นเทพตาบอด <br> • รูปงามที่สุดในแอสการ์ด <br> • เป็นที่รักของทุกคนทั้งเทพและยักษ์
+                    ยกเว้นโลกิ <br> • มีลูกที่เกิดกับภรรยาชื่อนันนา (Nanna) คือฟอร์เซตี้ <br> • เป็นอมตะ <br> • อยู่ที่วังชื่อเบรดาเบลิค (Breidablik) <br> • โดนฆ่าด้วยหอกมิซเซิลโท <br> • จะฟื้นขึ้นมาอีกทีหลังแร็คนาร็อค <br> • มีเรือที่ถูกกล่าวว่าดีที่สุดชื่อ
+                    Hringhorni <br>
                 </p>
             </div>
         </div>
