--- a/NorseHTML/frey.html
+++ b/NorseHTML/frey.html
@@ -7,20 +7,15 @@
     <title>Frey</title>
     <link rel="stylesheet" href="frey.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
@@ -34,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/NorseC.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้านอร์ส</a>
+                        <a class="nav-link" href="../ChooseHTML/NorseC.html">เทพเจ้านอร์ส</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -64,21 +59,11 @@
             <img src="../Full-Design/Odin1.jpg" class="img-fluid">
             <div class="container-fluid">
                 <div class="boxtext1">
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Frey</b> เป็นลูกชายของนจอร์ด เทพแห่งสายลมและท้องทะเล
-                        เทพวงศ์วาเนอร์ที่แลกตัวมาอยู่แอสการ์ด ตำนานหนึ่งว่ามารดาของพวกเขาคือเนอร์ธัส (Nerthus)
-                        พี่หรือน้องสาวของนจอร์ดเอง ซึ่งเมื่อนจอร์ดถูกแลกให้มาอยู่แอสการ์ด
-                        การแต่งงานระหว่างพี่น้องด้วยกันก็กลายเป็นที่รังเกียจไปเสียแล้ว ภรรยาของนจอร์ดจึงไม่มาด้วย
-                        แต่ให้สามีกับลูกมาแทน ส่วนตัวนางนั้นไม่เคยปรากฏตัวที่แอสการ์ดเลย
-                        เป็นเหตุให้สามีต้องได้ภรรยาคนที่ 2 คือยักษ์สกาดิ <br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;<b>นอกจากนี้</b> เฟรย์เป็นเทพแห่งอากาศดีและแสงอาทิตย์
-                        ธรรมชาติของการให้ ทำให้เฟรย์เป็นเทพรูปงาม หลังสงครามระหว่างเทพอีเซอร์ (Aesir) และวาเนอร์ (Vanir)
-                        ครอบครัวของเขาต้องมาอยู่แอสการ์ด เฟรย์เป็นเทพต่างวงศ์ที่มีโอกาสได้นั่งเป็นหนึ่งใน 12
-                        ของท้องพระโรงแกลดสไฮล์ม รับหน้าที่ปกครองอาล์ฟไฮล์ม อาณาเขตของเอลฟ์และแฟรี่ ซึ่งนับเป็นที่ๆ
-                        เหมาะที่สุดสำหรับเทพแห่งแสงตะวันเช่นเขา
-                        เฟรย์เป็นเจ้าของอาวุธที่มีอานุภาพมากที่สุดถ้าไม่นับมจอลเนียร์ของธอร์
-                        ดาบวิเศษของเฟรย์เมื่อชักออกจากฝัก มันจะต่อสู้กับฝ่ายตรงข้ามด้วยตัวของมันเอง
-                        พาหนะทรงพลังของเฟรย์คือหมูป่าขนทองกัลลินเบิร์สติ
-                        กับเรือสกิดแบลดเนียร์ที่พับให้เล็กนิดเดียวเก็บไว้ในกระเป๋า
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Frey</b> เป็นลูกชายของนจอร์ด เทพแห่งสายลมและท้องทะเล เทพวงศ์วาเนอร์ที่แลกตัวมาอยู่แอสการ์ด ตำนานหนึ่งว่ามารดาของพวกเขาคือเนอร์ธัส (Nerthus) พี่หรือน้องสาวของนจอร์ดเอง ซึ่งเมื่อนจอร์ดถูกแลกให้มาอยู่แอสการ์ด
+                        การแต่งงานระหว่างพี่น้องด้วยกันก็กลายเป็นที่รังเกียจไปเสียแล้ว ภรรยาของนจอร์ดจึงไม่มาด้วย แต่ให้สามีกับลูกมาแทน ส่วนตัวนางนั้นไม่เคยปรากฏตัวที่แอสการ์ดเลย เป็นเหตุให้สามีต้องได้ภรรยาคนที่ 2 คือยักษ์สกาดิ <br> &nbsp;&nbsp;&nbsp;&nbsp;
+                        <b>นอกจากนี้</b> เฟรย์เป็นเทพแห่งอากาศดีและแสงอาทิตย์ ธรรมชาติของการให้ ทำให้เฟรย์เป็นเทพรูปงาม หลังสงครามระหว่างเทพอีเซอร์ (Aesir) และวาเนอร์ (Vanir) ครอบครัวของเขาต้องมาอยู่แอสการ์ด เฟรย์เป็นเทพต่างวงศ์ที่มีโอกาสได้นั่งเป็นหนึ่งใน
+                        12 ของท้องพระโรงแกลดสไฮล์ม รับหน้าที่ปกครองอาล์ฟไฮล์ม อาณาเขตของเอลฟ์และแฟรี่ ซึ่งนับเป็นที่ๆ เหมาะที่สุดสำหรับเทพแห่งแสงตะวันเช่นเขา เฟรย์เป็นเจ้าของอาวุธที่มีอานุภาพมากที่สุดถ้าไม่นับมจอลเนียร์ของธอร์ ดาบวิเศษของเฟรย์เมื่อชักออกจากฝัก
+                        มันจะต่อสู้กับฝ่ายตรงข้ามด้วยตัวของมันเอง พาหนะทรงพลังของเฟรย์คือหมูป่าขนทองกัลลินเบิร์สติ กับเรือสกิดแบลดเนียร์ที่พับให้เล็กนิดเดียวเก็บไว้ในกระเป๋า
                     </p>
                 </div>
             </div>
@@ -89,16 +74,8 @@
         <div class="container-fluid">
             <div class="boxtext2">
                 <p class="txtx" align="center"><b class="bold1">สรุปฉบับย่อ!!</b></p>
-                <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br>
-                    • พี่ชายฝาแฝดของเฟรย่า มาจากวานาไฮม์พร้อมพ่อกับน้องสาว <br>
-                    • เทพแห่งแสงแดดอบอุ่น ความอุดมสมบูรณ์ และความสงบสุข <br>
-                    • มีดาบแห่งชัยชนะ ตอนหลังได้แลกให้สเคียร์เนียร์ (Skirnir) ไป <br>
-                    • หน้าตาดี <br>
-                    • เป็นเทพผู้ปกครองอัลฟ์ไฮม์ ดินแดนของพวกเอลฟ์ <br>
-                    • แต่งงานกับยักษ์ชื่อแกรด (Gerd) <br>
-                    • มีเรือพับได้ชื่อสกิดบลัดเนียร์ (Skidbladnir) <br>
-                    • มีพาหนะเป็นหมูป่าชื่อ Gullinbursti <br>
-                    • ต่อสู้กับเซิร์ทในแร็คนาร็อคและโดนเซิร์ทฆ่า <br>
+                <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br> • พี่ชายฝาแฝดของเฟรย่า มาจากวานาไฮม์พร้อมพ่อกับน้องสาว <br> • เทพแห่งแสงแดดอบอุ่น ความอุดมสมบูรณ์ และความสงบสุข <br> • มีดาบแห่งชัยชนะ ตอนหลังได้แลกให้สเคียร์เนียร์ (Skirnir) ไป <br> • หน้าตาดี <br> •
+                    เป็นเทพผู้ปกครองอัลฟ์ไฮม์ ดินแดนของพวกเอลฟ์ <br> • แต่งงานกับยักษ์ชื่อแกรด (Gerd) <br> • มีเรือพับได้ชื่อสกิดบลัดเนียร์ (Skidbladnir) <br> • มีพาหนะเป็นหมูป่าชื่อ Gullinbursti <br> • ต่อสู้กับเซิร์ทในแร็คนาร็อคและโดนเซิร์ทฆ่า <br>
                 </p>
             </div>
         </div>
