--- a/NorseHTML/freya.html
+++ b/NorseHTML/freya.html
@@ -7,20 +7,15 @@
     <title>Freya</title>
     <link rel="stylesheet" href="freya.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
@@ -34,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/NorseC.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้านอร์ส</a>
+                        <a class="nav-link" href="../ChooseHTML/NorseC.html">เทพเจ้านอร์ส</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -64,18 +59,11 @@
             <img src="../Full-Design/Odin1.jpg" class="img-fluid">
             <div class="container-fluid">
                 <div class="boxtext1">
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Freya</b> เป็นเทพีแห่งความรัก, ความงาม, ความอุดมสมบูรณ์, ทอง, เซย์ท
-                        (seiðr), สงคราม, และความตาย เฟรยาเป็นเจ้าของสร้อยไบรซิงกาเมน (Brísingamen),
-                        ขี่รถลากที่เทียมแมวสองตัว, หมูป่าฮีลดีสวีนี (Hildisvíni), เสื้อคลุมขนเหยี่ยว มีโอเดอร์เป็นสามี
-                        มีลูกสาวสององค์คือ นอส (Hnoss) และ เจอเซมิ (Gersemi) มีเฟรย์เป็นพี่ชาย (ภาษานอร์สโบราณ, "ลอร์ด")
-                        ร่วมบิดา (นเยิร์ด) และมารดา (น้องสาวของนจอร์ด) เฟรยาเป็นเทพีในวงศ์วาเนอร์
-                        ชื่อในปัจจุบันประกอบด้วย Freya, Frejya, Freyia, Frøya, Frøjya, และ Freia ซึ่งมีรากภาษามาจากคำว่า
-                        Freyja ในนอร์สโบราณ <br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;<b>นอกจากนี้</b> เฟรยาปกครองดินแดนหลังความตายโฟล์กแวงเกอร์ (Fólkvangr)
-                        ที่จะรับเอาวิญญาณนักรบครึ่งหนึ่งที่ตายในสนามรบ ขณะที่อีกครึ่งหนึ่งจะไปยังโถงของโอดิน วัลฮัลลา
-                        โถงของโฟล์กแวงเกอร์คือ เซสริมเนียร์ (Sessrúmnir) โอเดอร์ผู้เป็นสามีได้หายตัวไปบ่อยๆ
-                        เฟรยาร้องไห้เป็นทองสีแดง น้ำตาของเธอร่วงตกลงไปยังพื้นโลก และเปลี่ยนเป็นสายแร่ทองคำ
-                        เธอได้ออกตามหาสามีภายใต้ชื่อปลอม Gefn, Hörn, Mardöll, Sýr, Valfreyja, และ Vanadís
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Freya</b> เป็นเทพีแห่งความรัก, ความงาม, ความอุดมสมบูรณ์, ทอง, เซย์ท (seiðr), สงคราม, และความตาย เฟรยาเป็นเจ้าของสร้อยไบรซิงกาเมน (Brísingamen), ขี่รถลากที่เทียมแมวสองตัว, หมูป่าฮีลดีสวีนี (Hildisvíni), เสื้อคลุมขนเหยี่ยว
+                        มีโอเดอร์เป็นสามี มีลูกสาวสององค์คือ นอส (Hnoss) และ เจอเซมิ (Gersemi) มีเฟรย์เป็นพี่ชาย (ภาษานอร์สโบราณ, "ลอร์ด") ร่วมบิดา (นเยิร์ด) และมารดา (น้องสาวของนจอร์ด) เฟรยาเป็นเทพีในวงศ์วาเนอร์ ชื่อในปัจจุบันประกอบด้วย Freya, Frejya,
+                        Freyia, Frøya, Frøjya, และ Freia ซึ่งมีรากภาษามาจากคำว่า Freyja ในนอร์สโบราณ <br> &nbsp;&nbsp;&nbsp;&nbsp;
+                        <b>นอกจากนี้</b> เฟรยาปกครองดินแดนหลังความตายโฟล์กแวงเกอร์ (Fólkvangr) ที่จะรับเอาวิญญาณนักรบครึ่งหนึ่งที่ตายในสนามรบ ขณะที่อีกครึ่งหนึ่งจะไปยังโถงของโอดิน วัลฮัลลา โถงของโฟล์กแวงเกอร์คือ เซสริมเนียร์ (Sessrúmnir) โอเดอร์ผู้เป็นสามีได้หายตัวไปบ่อยๆ
+                        เฟรยาร้องไห้เป็นทองสีแดง น้ำตาของเธอร่วงตกลงไปยังพื้นโลก และเปลี่ยนเป็นสายแร่ทองคำ เธอได้ออกตามหาสามีภายใต้ชื่อปลอม Gefn, Hörn, Mardöll, Sýr, Valfreyja, และ Vanadís
                     </p>
                 </div>
             </div>
@@ -86,22 +74,10 @@
         <div class="container-fluid">
             <div class="boxtext2">
                 <p class="txtx" align="center"><b class="bold1">สรุปฉบับย่อ!!</b></p>
-                <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br>
-                    • เทพีผู้ควบคุมหน่วยวาลคีรี่/หัวหน้าของเหล่าวาลคีรี่ <br>
-                    • เทพีแห่งความรัก(แบบ passion) และความอุดมสมบูรณ์ <br>
-                    • หน้าตาดี <br>
-                    • เธอเป็นน้องสาวฝาแฝดของเฟรย์ เป็นเทพวงศ์วานีร์ที่ถูกแลกตัวมาอยู่ที่แอสการ์ดพร้อมกับพ่อและพี่ชาย <br>
-                    • ชอบทอง/ทรัพย์สินสวยๆงามๆ <br>
-                    • มีผ้าคลุมปีกขนเหยี่ยวที่สวมแล้วจะบินได้ <br>
-                    • มีสามีชื่ออตตา (Od) ที่ชอบออกไปเที่ยวเล่นไม่กลับบ้าน <br>
-                    • มีสร้อยบรินซิงกาเมนที่ยอมไปนอนกับคนแคระทั้ง4เพื่อให้ได้มา <br>
-                    แต่สุดท้ายโดนโลกิขโมยไป <br>
-                    • มีพาหนะเป็นหมูป่า (Hildisvini) ที่เคยเป็นคน (ชื่อ Ottar) มาก่อน <br>
-                    โดนโลกิแขวะว่าขี่คนรักไปไหนมาไหนอยู่บ่อยๆ <br>
-                    • ว่ากันว่าทองคำเกิดจากน้ำตาของเฟรย่าที่ออกตามหาสามีไปทั่ว <br>
-                    • มีรถศึกเทียมแมว <br>
-                    • ชื่อของเฟรย่าเป็นที่มาของวันศุกร์ <br>
-                    • ชอบช่วยเหลือผู้ที่กำลังเดือดร้อน</p>
+                <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br> • เทพีผู้ควบคุมหน่วยวาลคีรี่/หัวหน้าของเหล่าวาลคีรี่ <br> • เทพีแห่งความรัก(แบบ passion) และความอุดมสมบูรณ์ <br> • หน้าตาดี <br> • เธอเป็นน้องสาวฝาแฝดของเฟรย์ เป็นเทพวงศ์วานีร์ที่ถูกแลกตัวมาอยู่ที่แอสการ์ดพร้อมกับพ่อและพี่ชาย
+                    <br> • ชอบทอง/ทรัพย์สินสวยๆงามๆ <br> • มีผ้าคลุมปีกขนเหยี่ยวที่สวมแล้วจะบินได้ <br> • มีสามีชื่ออตตา (Od) ที่ชอบออกไปเที่ยวเล่นไม่กลับบ้าน <br> • มีสร้อยบรินซิงกาเมนที่ยอมไปนอนกับคนแคระทั้ง4เพื่อให้ได้มา <br> แต่สุดท้ายโดนโลกิขโมยไป
+                    <br> • มีพาหนะเป็นหมูป่า (Hildisvini) ที่เคยเป็นคน (ชื่อ Ottar) มาก่อน <br> โดนโลกิแขวะว่าขี่คนรักไปไหนมาไหนอยู่บ่อยๆ <br> • ว่ากันว่าทองคำเกิดจากน้ำตาของเฟรย่าที่ออกตามหาสามีไปทั่ว <br> • มีรถศึกเทียมแมว <br> • ชื่อของเฟรย่าเป็นที่มาของวันศุกร์
+                    <br> • ชอบช่วยเหลือผู้ที่กำลังเดือดร้อน</p>
             </div>
         </div>
     </div>
