--- a/NorseHTML/frigg.html
+++ b/NorseHTML/frigg.html
@@ -7,20 +7,15 @@
     <title>Frigg</title>
     <link rel="stylesheet" href="frigg.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
@@ -34,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/NorseC.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้านอร์ส</a>
+                        <a class="nav-link" href="../ChooseHTML/NorseC.html">เทพเจ้านอร์ส</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -63,18 +58,10 @@
             <img src="../Full-Design/Odin1.jpg" class="img-fluid">
             <div class="container-fluid">
                 <div class="boxtext1">
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Frigg</b> เป็นแม่ของ Baldr
-                        เทพเจ้าแห่งแสงสว่างและความบริสุทธิ์ วันหนึ่งฟริกก์ฝันว่าบัลเดอร์ตาย
-                        เลยไปอ้อนวอนต่อพลังธรรมชาติทุกแห่งเพื่อไม่ให้มีสิ่งใดทำอันตรายลูกตัวเองได้แต่ Loki
-                        เทพตัวป่วนเจ้าเก่าก็อาศัยเล่ห์เหลี่ยมล้วงจุดอ่อนมาได้จนรู้ว่า Frigg ไม่ได้ไปขอพรจากต้น Mistletoe
-                        เพราะมองว่าอ่อนเกินไป ทำอันตรายลูกไม่ได้หรอก ดังนั้น โลกิจึงสร้างลูกธนูจากต้น Mistletoe
-                        และยิงใส่ Baldr จนตายคาที่ ซึ่งเป็นจุดเริ่มต้นแห่งมหาสงคราม Ragnarök
-                        ที่เกิดการต่อสู้และเข่นฆ่าระหว่างเหล่าเทพนั่นเอง <br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;<b>เนื่องจาก</b> ฟริกก์เป็นเทวีแห่งความงาม เมฆและท้องฟ้า
-                        ยามว่างนางจะเอาปุยเมฆมาปั่นเป็นด้ายเพื่อทอผ้า
-                        Frigg เป็นภรรยาของ Odin เทพีแห่งสวรรค์และยังเป็นราชินีแห่งÆsir
-                        เช่นเดียวกับเฟรยา เธอควบคุมความอุดมสมบูรณ์ความรัก
-                        แต่ยังควบคุมการจัดการบ้านการแต่งงานการเป็นมารดาและศิลปะในบ้าน
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Frigg</b> เป็นแม่ของ Baldr เทพเจ้าแห่งแสงสว่างและความบริสุทธิ์ วันหนึ่งฟริกก์ฝันว่าบัลเดอร์ตาย เลยไปอ้อนวอนต่อพลังธรรมชาติทุกแห่งเพื่อไม่ให้มีสิ่งใดทำอันตรายลูกตัวเองได้แต่ Loki เทพตัวป่วนเจ้าเก่าก็อาศัยเล่ห์เหลี่ยมล้วงจุดอ่อนมาได้จนรู้ว่า
+                        Frigg ไม่ได้ไปขอพรจากต้น Mistletoe เพราะมองว่าอ่อนเกินไป ทำอันตรายลูกไม่ได้หรอก ดังนั้น โลกิจึงสร้างลูกธนูจากต้น Mistletoe และยิงใส่ Baldr จนตายคาที่ ซึ่งเป็นจุดเริ่มต้นแห่งมหาสงคราม Ragnarök ที่เกิดการต่อสู้และเข่นฆ่าระหว่างเหล่าเทพนั่นเอง
+                        <br> &nbsp;&nbsp;&nbsp;&nbsp;
+                        <b>เนื่องจาก</b> ฟริกก์เป็นเทวีแห่งความงาม เมฆและท้องฟ้า ยามว่างนางจะเอาปุยเมฆมาปั่นเป็นด้ายเพื่อทอผ้า Frigg เป็นภรรยาของ Odin เทพีแห่งสวรรค์และยังเป็นราชินีแห่งÆsir เช่นเดียวกับเฟรยา เธอควบคุมความอุดมสมบูรณ์ความรัก แต่ยังควบคุมการจัดการบ้านการแต่งงานการเป็นมารดาและศิลปะในบ้าน
                         เทพธิดาแห่งนี้มีพลังแห่งการพยากรณ์(ถึงแม้ว่ามันจะขัดแย้งกัน) แต่เธอไม่เคยบอกสิ่งที่เธอเห็น</p>
                 </div>
             </div>
@@ -84,14 +71,8 @@
         <img src="../Full-Design/Odin2.jpg" class="img-fluid">
         <div class="container-fluid">
             <div class="boxtext2">
-                <p class ="txtx"align = "center"><b class="bold1">สรุปฉบับย่อ!!</b></p>
-                   <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br>
-                    • เป็นเทพีแห่งความรัก (แบบความอบอุ่นในครอบครัว)<br>
-                    • เทพีแห่งความรู้และการล่วงรู้<br>
-                    • คำว่า Friday มาจากชื่อของ Frigg<br>
-                    • อาศัยอยู่ที่วังชื่อ Fensalir<br>
-                    • เป็นผู้ไปขอร้องทุกสรรพสิ่งไม่ให้ทำร้ายบัลเดอร์<br>
-                    • เป็นภรรยาของโอดิน</p>
+                <p class="txtx" align="center"><b class="bold1">สรุปฉบับย่อ!!</b></p>
+                <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br> • เป็นเทพีแห่งความรัก (แบบความอบอุ่นในครอบครัว)<br> • เทพีแห่งความรู้และการล่วงรู้<br> • คำว่า Friday มาจากชื่อของ Frigg<br> • อาศัยอยู่ที่วังชื่อ Fensalir<br> • เป็นผู้ไปขอร้องทุกสรรพสิ่งไม่ให้ทำร้ายบัลเดอร์<br>                    • เป็นภรรยาของโอดิน</p>
             </div>
         </div>
     </div>
@@ -105,8 +86,7 @@
                     <img src="https://www.img.in.th/images/7d287549ed92bd503e2b26f7c7952144.jpg" alt="7d287549ed92bd503e2b26f7c7952144.jpg"
                         width="100" />
                 </label>
-                <img
-                    src="https://www.img.in.th/images/7d287549ed92bd503e2b26f7c7952144.jpg" alt="7d287549ed92bd503e2b26f7c7952144.jpg" />
+                <img src="https://www.img.in.th/images/7d287549ed92bd503e2b26f7c7952144.jpg" alt="7d287549ed92bd503e2b26f7c7952144.jpg" />
 
                 <!--Lets show the second image by default on page load-->
                 <input type="radio" name="slide_switch" id="id2" checked="checked" />
@@ -114,24 +94,23 @@
                     <img src="https://www.img.in.th/images/551b22e798ad344168f85a4dbd5df0d0.jpg" alt="551b22e798ad344168f85a4dbd5df0d0.jpg"
                         width="100" />
                 </label>
-                <img
-                    src="https://www.img.in.th/images/551b22e798ad344168f85a4dbd5df0d0.jpg" alt="551b22e798ad344168f85a4dbd5df0d0.jpg" />
+                <img src="https://www.img.in.th/images/551b22e798ad344168f85a4dbd5df0d0.jpg" alt="551b22e798ad344168f85a4dbd5df0d0.jpg" />
 
                 <input type="radio" name="slide_switch" id="id3" />
                 <label for="id3">
                     <img src="https://lh3.googleusercontent.com/zJKyaQ_40O_244AlLszpxi8coP5Z9fCBAJVnISlmKMN9J42GBaQ3W5MTSUrZM1ENF9z8eJeHRDDsJXZwYYqM5Y7CT0rGGqLuVhgiJWADY6c-3CX4-Ke6yzySLAdC6F7xlbYIzyW2Y2K_tB-z3Ca7GtgCxqvSi2bIdp9FXSUh7_HrpzX6mJwqaJWalStS4EEfXScGkzLRZLNrxxo04HiK7Fnr2ragL6ZwjZAiswbDzK8CbWXTSEWe1Fp3dwH3nsLDE7sObtpJo0miB_r64kvs7MEAm-xNRecqET5qk5qFPKqN-CYqt5l74V_XRTEj9pr_odjUqoU2fE-5V-2yayYic_WA6xJQ_C-RHOHZUKvBIJ18jPOaH6Hg2XWidcEXdm_ZT00SxrNXWx1RDV1LpRkCT2opEEjUr5SH5K1iliJ1rWm0VQXz4OS9sl2-xMZlf684_hsM9BT3M_lWTl1N2wNQ_ltxjGPWoEXslOhGYIFgreNAelBfdBm99859BWEfQ5UeVDGMS05AmeoIDA95FddxLNgK8shTeD4vVAi_ZgSfYviI11qP2EGmKRak5CaGP_ejmSwyA9NWecya7KXNyfVhJsR25v9JtKMbQA4P0zna9ngRk1_mQtOaA0RnjWoz9uoC0z_tlvoA4wWAq16kHmfF0vKtzcpz1NVMj9aQOK4_dUDBazN9XFfW9heA=w640-h320-no"
                         width="100" />
                 </label>
-                <img
-                    src="https://lh3.googleusercontent.com/zJKyaQ_40O_244AlLszpxi8coP5Z9fCBAJVnISlmKMN9J42GBaQ3W5MTSUrZM1ENF9z8eJeHRDDsJXZwYYqM5Y7CT0rGGqLuVhgiJWADY6c-3CX4-Ke6yzySLAdC6F7xlbYIzyW2Y2K_tB-z3Ca7GtgCxqvSi2bIdp9FXSUh7_HrpzX6mJwqaJWalStS4EEfXScGkzLRZLNrxxo04HiK7Fnr2ragL6ZwjZAiswbDzK8CbWXTSEWe1Fp3dwH3nsLDE7sObtpJo0miB_r64kvs7MEAm-xNRecqET5qk5qFPKqN-CYqt5l74V_XRTEj9pr_odjUqoU2fE-5V-2yayYic_WA6xJQ_C-RHOHZUKvBIJ18jPOaH6Hg2XWidcEXdm_ZT00SxrNXWx1RDV1LpRkCT2opEEjUr5SH5K1iliJ1rWm0VQXz4OS9sl2-xMZlf684_hsM9BT3M_lWTl1N2wNQ_ltxjGPWoEXslOhGYIFgreNAelBfdBm99859BWEfQ5UeVDGMS05AmeoIDA95FddxLNgK8shTeD4vVAi_ZgSfYviI11qP2EGmKRak5CaGP_ejmSwyA9NWecya7KXNyfVhJsR25v9JtKMbQA4P0zna9ngRk1_mQtOaA0RnjWoz9uoC0z_tlvoA4wWAq16kHmfF0vKtzcpz1NVMj9aQOK4_dUDBazN9XFfW9heA=w640-h320-no" />
+                <img src="https://lh3.googleusercontent.com/zJKyaQ_40O_244AlLszpxi8coP5Z9fCBAJVnISlmKMN9J42GBaQ3W5MTSUrZM1ENF9z8eJeHRDDsJXZwYYqM5Y7CT0rGGqLuVhgiJWADY6c-3CX4-Ke6yzySLAdC6F7xlbYIzyW2Y2K_tB-z3Ca7GtgCxqvSi2bIdp9FXSUh7_HrpzX6mJwqaJWalStS4EEfXScGkzLRZLNrxxo04HiK7Fnr2ragL6ZwjZAiswbDzK8CbWXTSEWe1Fp3dwH3nsLDE7sObtpJo0miB_r64kvs7MEAm-xNRecqET5qk5qFPKqN-CYqt5l74V_XRTEj9pr_odjUqoU2fE-5V-2yayYic_WA6xJQ_C-RHOHZUKvBIJ18jPOaH6Hg2XWidcEXdm_ZT00SxrNXWx1RDV1LpRkCT2opEEjUr5SH5K1iliJ1rWm0VQXz4OS9sl2-xMZlf684_hsM9BT3M_lWTl1N2wNQ_ltxjGPWoEXslOhGYIFgreNAelBfdBm99859BWEfQ5UeVDGMS05AmeoIDA95FddxLNgK8shTeD4vVAi_ZgSfYviI11qP2EGmKRak5CaGP_ejmSwyA9NWecya7KXNyfVhJsR25v9JtKMbQA4P0zna9ngRk1_mQtOaA0RnjWoz9uoC0z_tlvoA4wWAq16kHmfF0vKtzcpz1NVMj9aQOK4_dUDBazN9XFfW9heA=w640-h320-no"
+                />
 
                 <input type="radio" name="slide_switch" id="id4" />
                 <label for="id4">
                     <img src="https://lh3.googleusercontent.com/Rjm0JnDsqypUTULBt3UAhCQXJ-YCsw58Tv_sfGHocIt4IQhlogwuk1dS9TNu3UiVFfsddlZZ4Cqa_gxMtVvSdZKzCdSZMklybW-szYJCX1l2nG87lA7VNvBymQvaeM2cczs5dJyFXckzK4J489lgsDiHFyLWQQmJSM27Sop9m-B1RK1AsNqAgqYviUaKDP-aSyX4OK6JnDPQer9-_aeeARYx4fCTaJmTmiUDGHy8GkOZdpqMSdX_wK8YQFi5wMIIAriJOIpZrAQreRZrvuHc34UhHQ1PVQC4XyTfNzKP7Szo52_rFuCaIHzu-XJ1JKW33V-jfFOP0KYgro8mNAC9eGLKSZP9iuhQ_z6YqZm1W7j1Npg_F-E4Jkid_2j99a6wgQLVjpOOm2L2h03vGpn9F0YjFD-li0YFTE1z0T-lQXFyv6BRZi7jTVME_vMu5qThzxwzWI-MOmBkEjC7MVclcC6f67NJMbzkZ9XcDaHp0aCJiKZk8MQJKicedXlr8fQL1zLBXueWXjJivJxZGJ7BLSlQQf9lE9GNq9BxTLVlGvRE3R4kVuYswu69pjIc33XO8cIHxkeXFBUHjn_F8EKf7SM4nUZ05SXJPGWuQJqYMFlJHGu_n9kSxSP-DIpcdnjZhFO3Hq5miDlepIpwd4N4XIVEl7CNI0gCPpNUJEJdtWLbFP2ieUADmEtB=w640-h320-no"
                         width="100" />
                 </label>
-                <img
-                    src="https://lh3.googleusercontent.com/Rjm0JnDsqypUTULBt3UAhCQXJ-YCsw58Tv_sfGHocIt4IQhlogwuk1dS9TNu3UiVFfsddlZZ4Cqa_gxMtVvSdZKzCdSZMklybW-szYJCX1l2nG87lA7VNvBymQvaeM2cczs5dJyFXckzK4J489lgsDiHFyLWQQmJSM27Sop9m-B1RK1AsNqAgqYviUaKDP-aSyX4OK6JnDPQer9-_aeeARYx4fCTaJmTmiUDGHy8GkOZdpqMSdX_wK8YQFi5wMIIAriJOIpZrAQreRZrvuHc34UhHQ1PVQC4XyTfNzKP7Szo52_rFuCaIHzu-XJ1JKW33V-jfFOP0KYgro8mNAC9eGLKSZP9iuhQ_z6YqZm1W7j1Npg_F-E4Jkid_2j99a6wgQLVjpOOm2L2h03vGpn9F0YjFD-li0YFTE1z0T-lQXFyv6BRZi7jTVME_vMu5qThzxwzWI-MOmBkEjC7MVclcC6f67NJMbzkZ9XcDaHp0aCJiKZk8MQJKicedXlr8fQL1zLBXueWXjJivJxZGJ7BLSlQQf9lE9GNq9BxTLVlGvRE3R4kVuYswu69pjIc33XO8cIHxkeXFBUHjn_F8EKf7SM4nUZ05SXJPGWuQJqYMFlJHGu_n9kSxSP-DIpcdnjZhFO3Hq5miDlepIpwd4N4XIVEl7CNI0gCPpNUJEJdtWLbFP2ieUADmEtB=w640-h320-no" />
+                <img src="https://lh3.googleusercontent.com/Rjm0JnDsqypUTULBt3UAhCQXJ-YCsw58Tv_sfGHocIt4IQhlogwuk1dS9TNu3UiVFfsddlZZ4Cqa_gxMtVvSdZKzCdSZMklybW-szYJCX1l2nG87lA7VNvBymQvaeM2cczs5dJyFXckzK4J489lgsDiHFyLWQQmJSM27Sop9m-B1RK1AsNqAgqYviUaKDP-aSyX4OK6JnDPQer9-_aeeARYx4fCTaJmTmiUDGHy8GkOZdpqMSdX_wK8YQFi5wMIIAriJOIpZrAQreRZrvuHc34UhHQ1PVQC4XyTfNzKP7Szo52_rFuCaIHzu-XJ1JKW33V-jfFOP0KYgro8mNAC9eGLKSZP9iuhQ_z6YqZm1W7j1Npg_F-E4Jkid_2j99a6wgQLVjpOOm2L2h03vGpn9F0YjFD-li0YFTE1z0T-lQXFyv6BRZi7jTVME_vMu5qThzxwzWI-MOmBkEjC7MVclcC6f67NJMbzkZ9XcDaHp0aCJiKZk8MQJKicedXlr8fQL1zLBXueWXjJivJxZGJ7BLSlQQf9lE9GNq9BxTLVlGvRE3R4kVuYswu69pjIc33XO8cIHxkeXFBUHjn_F8EKf7SM4nUZ05SXJPGWuQJqYMFlJHGu_n9kSxSP-DIpcdnjZhFO3Hq5miDlepIpwd4N4XIVEl7CNI0gCPpNUJEJdtWLbFP2ieUADmEtB=w640-h320-no"
+                />
 
 
                 <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
