--- a/NorseHTML/odin.html
+++ b/NorseHTML/odin.html
@@ -7,20 +7,15 @@
     <title>Odin</title>
     <link rel="stylesheet" href="odin.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
@@ -34,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/NorseC.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้านอร์ส</a>
+                        <a class="nav-link" href="../ChooseHTML/NorseC.html">เทพเจ้านอร์ส</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -64,19 +59,10 @@
             <img src="../Full-Design/Odin1.jpg" class="img-fluid">
             <div class="container-fluid">
                 <div class="boxtext1">
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Odin</b> เทพเจ้าสูงสุดในเทพปกรณัมของชาวนอร์ส
-                        เป็นเทพเจ้าที่ใฝ่หาความรู้ ยึดมั่นในสัจจะ ช่วยเหลือผู้อื่น และออกผจญภัยเพื่อใช้ชีวิตให้คุ้มค่า
-                        รบอย่างกล้าหาญเพื่อให้ได้ตายอย่างมีเกียรติในสนามรบ
-                        ให้ลูกหลานนำเรื่องราวของตนไปเล่าขานในฐานะวีรบุรุษ
-                        และเพื่อให้ดวงวิญญาณได้รับเลือกให้เข้าร่วมกับกองทัพเทพ ร่วมต่อสู้กับยักษ์ในวันสิ้นโลก
-                        (ไวกิ้งเป็นตัวอย่างหนึ่งของชนที่นับถือศาสนานี้)
-                        แม้เทพโอดินทรงสร้างโลกแต่พระองค์ก็ไม่สามารถล่วงรู้อนาคตของโลกได้ โดยเฉพาะความลับสูงสุดของจักรวาล
-                        การถือกำเนิด ชีวิตหลังความตาย และอนาคตของโลก เพื่อให้ทรงทราบความลับเหล่านี้
-                        จึงทรงทรมาณองค์เองโดยผูกเท้าข้างหนึ่งกับพฤกษาที่เป็นแกนกลางของโลก (อิกก์ดราซิล) แทงหอกที่สีข้าง
-                        ทรมาณอยู่ถึง 9 วัน 9 คืน จนถึงกับสิ้นพระชนม์ <br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;<b>แต่แล้ว</b> ก็ทรงฟื้นคืนขึ้นมาใหม่โดยไม่เจ็บปวด
-                        แต่เต็มเปี่ยมไปด้วยปรีชาญาณ ทรงบันทึกสิ่งที่พระองค์ค้นพบในรูปแบบอักษรศักดิ์สิทธิ์ 24 ตัว
-                        เรียกว่า รูนส์ ซึ่งต่อมาทรงพระราชทานรูนส์แก่ชาวโลกเพื่อให้ใช้ในฐานะเทพพยากรณ์น</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Odin</b> เทพเจ้าสูงสุดในเทพปกรณัมของชาวนอร์ส เป็นเทพเจ้าที่ใฝ่หาความรู้ ยึดมั่นในสัจจะ ช่วยเหลือผู้อื่น และออกผจญภัยเพื่อใช้ชีวิตให้คุ้มค่า รบอย่างกล้าหาญเพื่อให้ได้ตายอย่างมีเกียรติในสนามรบ ให้ลูกหลานนำเรื่องราวของตนไปเล่าขานในฐานะวีรบุรุษ
+                        และเพื่อให้ดวงวิญญาณได้รับเลือกให้เข้าร่วมกับกองทัพเทพ ร่วมต่อสู้กับยักษ์ในวันสิ้นโลก (ไวกิ้งเป็นตัวอย่างหนึ่งของชนที่นับถือศาสนานี้) แม้เทพโอดินทรงสร้างโลกแต่พระองค์ก็ไม่สามารถล่วงรู้อนาคตของโลกได้ โดยเฉพาะความลับสูงสุดของจักรวาล
+                        การถือกำเนิด ชีวิตหลังความตาย และอนาคตของโลก เพื่อให้ทรงทราบความลับเหล่านี้ จึงทรงทรมาณองค์เองโดยผูกเท้าข้างหนึ่งกับพฤกษาที่เป็นแกนกลางของโลก (อิกก์ดราซิล) แทงหอกที่สีข้าง ทรมาณอยู่ถึง 9 วัน 9 คืน จนถึงกับสิ้นพระชนม์ <br> &nbsp;&nbsp;&nbsp;&nbsp;
+                        <b>แต่แล้ว</b> ก็ทรงฟื้นคืนขึ้นมาใหม่โดยไม่เจ็บปวด แต่เต็มเปี่ยมไปด้วยปรีชาญาณ ทรงบันทึกสิ่งที่พระองค์ค้นพบในรูปแบบอักษรศักดิ์สิทธิ์ 24 ตัว เรียกว่า รูนส์ ซึ่งต่อมาทรงพระราชทานรูนส์แก่ชาวโลกเพื่อให้ใช้ในฐานะเทพพยากรณ์น</p>
                 </div>
             </div>
         </div>
@@ -86,24 +72,10 @@
         <div class="container-fluid">
             <div class="boxtext2">
                 <p class="txtx" align="center"><b class="bold1">สรุปฉบับย่อ!!</b></p>
-                <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br>
-                    • เทพสูงสุดของชาวนอร์ส เป็นเทพบิดรผู้ให้กำเนิดเทพวงศ์เอซีร์ <br>
-                    • เคยแขวนตัวเองกับกิ่งของต้นอิกดราซิลเพื่อแลกกับความรู้ทั้งหมดบนโลก <br>
-                    • แลกตาข้างนึงเพื่อดื่มน้ำจากบ่อน้ำพุแห่งปัญญาเพื่อให้รู้โชคชะตาของโลก <br>
-                    • มีอีกาคู่ใจสองตัวคือฮูกินน์และมูนินน์ <br>
-                    • โอดินมีชื่อเรียกหลายชื่อ หนึ่งในนั้นนำมาเป็นชื่อของวันพุธ <br>
-                    • มีพาหนะเป็นม้า 8 ขาชื่อ สเลปนีร์ <br>
-                    • ใช้หอกกุงนีร์ที่ไม่เคยพลาดเป้าเป็นอาวุธ <br>
-                    • พยายามทุกวิธีทางเพื่อหยุดยั้งการเกิดแร็คนาร็อค <br>
-                    • เป็นพ่อของธอร์/บัลเดอร์/เฮมดอลล์ (ลูกคนละแม่กันหมด) <br>
-                    • เป็นพี่น้องร่วมสาบานกับโลกิ <br>
-                    • ผู้นำทัพเทพเอซีร์ต่อสู้กับเทพวานีร์ <br>
-                    • เป็นผู้สร้างวังวาลฮาลาและทัพวาลคีรี่ <br>
-                    • เป็นผู้สร้างอักษรรูน <br>
-                    • อาศัยอยู่ที่วังกลาสไฮม์ <br>
-                    • นั่งบนบัลลังค์ลิดสไคล์ฟที่สามารถมองเห็นได้ทั้ง 9 โลก <br>
-                    • โดน Fenrir ฆ่าในสงครามแร็คนาร็อค <br>
-                    • เป็นผู้ปลูกต้นอิกดราซิลโดยคำว่าอิกดราซิลมีความหมายว่า ม้าของโอดิน </p>
+                <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br> • เทพสูงสุดของชาวนอร์ส เป็นเทพบิดรผู้ให้กำเนิดเทพวงศ์เอซีร์ <br> • เคยแขวนตัวเองกับกิ่งของต้นอิกดราซิลเพื่อแลกกับความรู้ทั้งหมดบนโลก <br> • แลกตาข้างนึงเพื่อดื่มน้ำจากบ่อน้ำพุแห่งปัญญาเพื่อให้รู้โชคชะตาของโลก
+                    <br> • มีอีกาคู่ใจสองตัวคือฮูกินน์และมูนินน์ <br> • โอดินมีชื่อเรียกหลายชื่อ หนึ่งในนั้นนำมาเป็นชื่อของวันพุธ <br> • มีพาหนะเป็นม้า 8 ขาชื่อ สเลปนีร์ <br> • ใช้หอกกุงนีร์ที่ไม่เคยพลาดเป้าเป็นอาวุธ <br> • พยายามทุกวิธีทางเพื่อหยุดยั้งการเกิดแร็คนาร็อค
+                    <br> • เป็นพ่อของธอร์/บัลเดอร์/เฮมดอลล์ (ลูกคนละแม่กันหมด) <br> • เป็นพี่น้องร่วมสาบานกับโลกิ <br> • ผู้นำทัพเทพเอซีร์ต่อสู้กับเทพวานีร์ <br> • เป็นผู้สร้างวังวาลฮาลาและทัพวาลคีรี่ <br> • เป็นผู้สร้างอักษรรูน <br> • อาศัยอยู่ที่วังกลาสไฮม์
+                    <br> • นั่งบนบัลลังค์ลิดสไคล์ฟที่สามารถมองเห็นได้ทั้ง 9 โลก <br> • โดน Fenrir ฆ่าในสงครามแร็คนาร็อค <br> • เป็นผู้ปลูกต้นอิกดราซิลโดยคำว่าอิกดราซิลมีความหมายว่า ม้าของโอดิน </p>
             </div>
         </div>
     </div>
@@ -130,16 +102,14 @@
                     <img src="https://www.img.in.th/images/3ecf0a84548e3c156629eb2892023fd1.jpg"
                         width="100" />
                 </label>
-                <img
-                    src="https://www.img.in.th/images/3ecf0a84548e3c156629eb2892023fd1.jpg" />
+                <img src="https://www.img.in.th/images/3ecf0a84548e3c156629eb2892023fd1.jpg" />
 
                 <input type="radio" name="slide_switch" id="id4" />
                 <label for="id4">
                     <img src="https://www.img.in.th/images/a7ebc349cd642a532354b707032bb2ef.jpg"
                         width="100" />
                 </label>
-                <img
-                    src="https://www.img.in.th/images/a7ebc349cd642a532354b707032bb2ef.jpg" />
+                <img src="https://www.img.in.th/images/a7ebc349cd642a532354b707032bb2ef.jpg" />
 
 
                 <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
