--- a/NorseHTML/thor.html
+++ b/NorseHTML/thor.html
@@ -7,20 +7,15 @@
     <title>Thor</title>
     <link rel="stylesheet" href="thor.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
@@ -34,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/NorseC.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้านอร์ส</a>
+                        <a class="nav-link" href="../ChooseHTML/NorseC.html">เทพเจ้านอร์ส</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -64,16 +59,10 @@
             <img src="../Full-Design/Odin1.jpg" class="img-fluid">
             <div class="container-fluid">
                 <div class="boxtext1">
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Thor</b> เป็นเทพถือค้อนซึ่งเกี่ยวข้องกับสายฟ้า ฟ้าร้อง พายุ ต้นโอ๊ก
-                        พละกำลัง การคุ้มครองมนุษยชาติและตลอดจนการทำให้ศักดิ์สิทธิ์ การรักษาและความอุดมสมบูรณ์
-                        เทพที่มาจากกำเนิดเดียวกันในเทพปกรณัมเยอรมันและเพเกินที่กว้างกว่า
-                        เป็นที่รู้จักกันในภาษาอังกฤษเก่าว่า Þunor และภาษาเยอรมันโบราณเขตเหนือว่า Donar (อักษรรูน þonar
-                        ᚦᛟᚾᚨᚱ) ซึ่งกำเนิดจากภาษาโปรโตเยอรมัน *Þunraz (หมายถึง "สายฟ้า") <br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;<b>นอกจากนั้น</b>
-                        ธอร์ยังเป็นเทพที่ได้รับการกล่าวถึงอย่างสำคัญตลอดประวัติศาสตร์ที่มีการบันทึกของชาวเยอรมัน
-                        จากการยึดครองดินแดนเยอรมาเนียของโรมัน ไปจนถึงการขยายชนเผ่าในสมัยการโยกย้ายถิ่นฐาน
-                        ไปจนถึงการได้รับความนิยมอย่างสูงในยุคไวกิ้ง ธอร์เป็นหนึ่งในสิบสองสำคัญของเทพเจ้าสแกนดิเนเวีย
-                        เป็นเทพแห่งสายฟ้า ทอร์เป็นบุตรของเทพเจ้าโอดิน และจอร์ดน่ง (Fjörgyn) ยักษ์แห่งแผ่นดิน</p>
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Thor</b> เป็นเทพถือค้อนซึ่งเกี่ยวข้องกับสายฟ้า ฟ้าร้อง พายุ ต้นโอ๊ก พละกำลัง การคุ้มครองมนุษยชาติและตลอดจนการทำให้ศักดิ์สิทธิ์ การรักษาและความอุดมสมบูรณ์ เทพที่มาจากกำเนิดเดียวกันในเทพปกรณัมเยอรมันและเพเกินที่กว้างกว่า
+                        เป็นที่รู้จักกันในภาษาอังกฤษเก่าว่า Þunor และภาษาเยอรมันโบราณเขตเหนือว่า Donar (อักษรรูน þonar ᚦᛟᚾᚨᚱ) ซึ่งกำเนิดจากภาษาโปรโตเยอรมัน *Þunraz (หมายถึง "สายฟ้า") <br> &nbsp;&nbsp;&nbsp;&nbsp;
+                        <b>นอกจากนั้น</b> ธอร์ยังเป็นเทพที่ได้รับการกล่าวถึงอย่างสำคัญตลอดประวัติศาสตร์ที่มีการบันทึกของชาวเยอรมัน จากการยึดครองดินแดนเยอรมาเนียของโรมัน ไปจนถึงการขยายชนเผ่าในสมัยการโยกย้ายถิ่นฐาน ไปจนถึงการได้รับความนิยมอย่างสูงในยุคไวกิ้ง
+                        ธอร์เป็นหนึ่งในสิบสองสำคัญของเทพเจ้าสแกนดิเนเวีย เป็นเทพแห่งสายฟ้า ทอร์เป็นบุตรของเทพเจ้าโอดิน และจอร์ดน่ง (Fjörgyn) ยักษ์แห่งแผ่นดิน</p>
                 </div>
             </div>
         </div>
@@ -83,23 +72,10 @@
         <div class="container-fluid">
             <div class="boxtext2">
                 <p class="txtx" align="center"><b class="bold1">สรุปฉบับย่อ!!</b></p>
-                <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br>
-                    • เทพสายฟ้าและการเพาะปลูก เป็นลูกของโอดินกับนางยักษ์ยอร์ด Jord <br>
-                    • มีภรรยา 2 คน คนแรกคือ Jarnsaxa และคนที่สองคือ Sif มีลูกคือ Magni, Thrud, Modi, Lorride <br>
-                    • มีค้อน Mjölnir ที่มีความสามารถ คือ ขว้างไปแล้วกลับมาได้เหมือนบูมเมอแรงเป็นอาวุธ <br>
-                    • มีเข็มขัดวิเศษ Megingiord มีคุณสมบัติเพิ่มพลังกายมากกว่าปกติ 2 เท่า <br>
-                    • ใช้แพะชื่อ Tanngrisnrและ Tanngniostrเป็นพาหนะ <br>
-                    • เกลียดยักษ์เข้าไส้ <br>
-                    • หงุดหงิดง่ายและขี้โมโห <br>
-                    • ชอบช่วยเหลือคนยากจน <br>
-                    • เคยออกเดินทางไปมิดการ์ด - โยเทนไฮม์กับโลกิ <br>
-                    • เคยปลอมเป็นผู้หญิง <br>
-                    • สู้กับยอร์มุนกานด์ในแร็คนาร็อคจนตายทั้งคู่ <br>
-                    • อยู่ที่วังชื่อ Bilskirnirในเขต Thrudheim รอบนอกแอสการ์ด <br>
-                    • ชื่อของธอร์ถูกนำมาใช้เป็นชื่อของวันพฤหัส <br>
-                    • เมื่อตอนยังเด็กมีพละกำลังมากจึงต้องในไปฝากยักษ์ Vingnir และ Hlora เลี้ยง และในที่สุดก็ฆ่ายักษ์ 2
-                    ตนนั้นตาย <br>
-                    • ถูกห้ามใช้สะพานไบฟรอสเพราะจะทำให้สะพานถล่ม </p>
+                <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br> • เทพสายฟ้าและการเพาะปลูก เป็นลูกของโอดินกับนางยักษ์ยอร์ด Jord <br> • มีภรรยา 2 คน คนแรกคือ Jarnsaxa และคนที่สองคือ Sif มีลูกคือ Magni, Thrud, Modi, Lorride <br> • มีค้อน Mjölnir ที่มีความสามารถ คือ ขว้างไปแล้วกลับมาได้เหมือนบูมเมอแรงเป็นอาวุธ
+                    <br> • มีเข็มขัดวิเศษ Megingiord มีคุณสมบัติเพิ่มพลังกายมากกว่าปกติ 2 เท่า <br> • ใช้แพะชื่อ Tanngrisnrและ Tanngniostrเป็นพาหนะ <br> • เกลียดยักษ์เข้าไส้ <br> • หงุดหงิดง่ายและขี้โมโห <br> • ชอบช่วยเหลือคนยากจน <br> • เคยออกเดินทางไปมิดการ์ด
+                    - โยเทนไฮม์กับโลกิ <br> • เคยปลอมเป็นผู้หญิง <br> • สู้กับยอร์มุนกานด์ในแร็คนาร็อคจนตายทั้งคู่ <br> • อยู่ที่วังชื่อ Bilskirnirในเขต Thrudheim รอบนอกแอสการ์ด <br> • ชื่อของธอร์ถูกนำมาใช้เป็นชื่อของวันพฤหัส <br> • เมื่อตอนยังเด็กมีพละกำลังมากจึงต้องในไปฝากยักษ์
+                    Vingnir และ Hlora เลี้ยง และในที่สุดก็ฆ่ายักษ์ 2 ตนนั้นตาย <br> • ถูกห้ามใช้สะพานไบฟรอสเพราะจะทำให้สะพานถล่ม </p>
             </div>
         </div>
     </div>
