--- a/NorseHTML/tyr.html
+++ b/NorseHTML/tyr.html
@@ -7,20 +7,15 @@
     <title>Tyr</title>
     <link rel="stylesheet" href="baldr.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
@@ -34,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/NorseC.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้านอร์ส</a>
+                        <a class="nav-link" href="../ChooseHTML/NorseC.html">เทพเจ้านอร์ส</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -64,24 +59,13 @@
             <img src="../Full-Design/Odin1.jpg" class="img-fluid">
             <div class="container-fluid">
                 <div class="boxtext1">
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Tyr</b> (นอร์สโบราณ: Týr; อังกฤษ: Tyr, /tɪɚ/) หรือ ทิว (อังกฤษเก่า:
-                        Tiw
-                        หรือ Tiu) เป็นเทพที่โบราณที่สุดองค์หนึ่งที่มีประวัติที่ลึกลับของกลุ่มชนเจอร์แมนิก
-                        มีหน้าที่ดูแลเรื่องสงครามโดยเฉพาะเรื่องสนธิสัญญาและความยุติธรรม
-                        เป็นผู้ค้ำประกันสนธิสัญญาและผู้พิทักษ์คำสัตย์ปฏิญาณ
-                        เรื่องเล่าเกี่ยวกับเทียร์ที่ปัจจุบันรู้จักกันดีที่สุด คือ เทียร์เป็นผู้ค้ำประกันความสุจริต
-                        จึงเอามือข้างหนึ่งไปวางระหว่างขากรรไกรของหมาป่าปีศาจชื่อ เฟนเรียร์ (Fenrir)
-                        ขณะที่เทพองค์อื่นแสร้งทำเป็นไม่สนใจ แต่ที่จริงหมายผูกมัดตัวเฟนเรียร์
-                        เมื่อเฟนเรียร์ตายใจก็ถูกเทพเหล่านี้ผูกมัดตัว พอรู้ว่าถูกหลอกก็กัดมือของเทียร์จนขาด
-                        เหตุการณ์นี้ทำให้เทียร์มีอีกชื่อหนึ่งว่า "เทพมือเดียว"
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Tyr</b> (นอร์สโบราณ: Týr; อังกฤษ: Tyr, /tɪɚ/) หรือ ทิว (อังกฤษเก่า: Tiw หรือ Tiu) เป็นเทพที่โบราณที่สุดองค์หนึ่งที่มีประวัติที่ลึกลับของกลุ่มชนเจอร์แมนิก มีหน้าที่ดูแลเรื่องสงครามโดยเฉพาะเรื่องสนธิสัญญาและความยุติธรรม
+                        เป็นผู้ค้ำประกันสนธิสัญญาและผู้พิทักษ์คำสัตย์ปฏิญาณ เรื่องเล่าเกี่ยวกับเทียร์ที่ปัจจุบันรู้จักกันดีที่สุด คือ เทียร์เป็นผู้ค้ำประกันความสุจริต จึงเอามือข้างหนึ่งไปวางระหว่างขากรรไกรของหมาป่าปีศาจชื่อ เฟนเรียร์ (Fenrir) ขณะที่เทพองค์อื่นแสร้งทำเป็นไม่สนใจ
+                        แต่ที่จริงหมายผูกมัดตัวเฟนเรียร์ เมื่อเฟนเรียร์ตายใจก็ถูกเทพเหล่านี้ผูกมัดตัว พอรู้ว่าถูกหลอกก็กัดมือของเทียร์จนขาด เหตุการณ์นี้ทำให้เทียร์มีอีกชื่อหนึ่งว่า "เทพมือเดียว"
 
-                        <br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;<b>เทพเทียร์</b>
-                        เป็นเทพสงครามผู้กล้าหาญและมีเกียรติสูงสุดในคณะเทพเอเซียร์ พระองค์ประทานชัยชนะในการต่อสู้
-                        ความกล้าหาญ เกียรติยศ กฎระเบียบและพลัง ทรงเป็นผู้พิทักษ์สวรรค์ ทรงมีอีกพระนามว่า ทิว (Tiw)
-                        เทียร์เป็นเทพที่ชาวโรมันถือว่า เป็นองค์เดียวกับมาร์ส ซึ่งเป็นเทพแห่งสงครามเช่นกัน คำว่า
-                        "วันของมาร์ส" ในภาษาละติน (dies Marti) จึ่งแปลว่า "วันของเทียร์" (Týsdagr; อังกฤษ: Tuesday)
-                        ซึ่งปัจจุบันแปลว่า วันอังคาร
+                        <br> &nbsp;&nbsp;&nbsp;&nbsp;
+                        <b>เทพเทียร์</b> เป็นเทพสงครามผู้กล้าหาญและมีเกียรติสูงสุดในคณะเทพเอเซียร์ พระองค์ประทานชัยชนะในการต่อสู้ ความกล้าหาญ เกียรติยศ กฎระเบียบและพลัง ทรงเป็นผู้พิทักษ์สวรรค์ ทรงมีอีกพระนามว่า ทิว (Tiw) เทียร์เป็นเทพที่ชาวโรมันถือว่า
+                        เป็นองค์เดียวกับมาร์ส ซึ่งเป็นเทพแห่งสงครามเช่นกัน คำว่า "วันของมาร์ส" ในภาษาละติน (dies Marti) จึ่งแปลว่า "วันของเทียร์" (Týsdagr; อังกฤษ: Tuesday) ซึ่งปัจจุบันแปลว่า วันอังคาร
 
                     </p>
                 </div>
@@ -93,11 +77,8 @@
         <div class="container-fluid">
             <div class="boxtext2">
                 <p class="txtx" align="center"><b class="bold1">สรุปฉบับย่อ!!</b></p>
-                <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br>
-                    &nbsp;&nbsp;&nbsp;&nbsp;เทพ สงครามผู้กล้าหาญและมีเกียรติสูงสุดในคณะเทพเอเซียร์ พระองค์ประทานชัยชนะในการต่อสู้ ความกล้าหาญ
-                    เกียรติยศ กฎระเบียบและพลัง ทรงเป็นผู้พิทักษ์สวรรค์ ทรงเสียสละพระหัตถ์
-                    (หรือพระกร)ข้างหนึ่งในการพันธนาการพญาสุนัขป่าเฟนเรียร์เพื่อความปลอดภัย ของสวรรค์และโลก
-                    ทรงมีอีกพระนามว่า ทิว (Tiw)>
+                <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br> &nbsp;&nbsp;&nbsp;&nbsp;เทพ สงครามผู้กล้าหาญและมีเกียรติสูงสุดในคณะเทพเอเซียร์ พระองค์ประทานชัยชนะในการต่อสู้ ความกล้าหาญ เกียรติยศ กฎระเบียบและพลัง ทรงเป็นผู้พิทักษ์สวรรค์ ทรงเสียสละพระหัตถ์ (หรือพระกร)ข้างหนึ่งในการพันธนาการพญาสุนัขป่าเฟนเรียร์เพื่อความปลอดภัย
+                    ของสวรรค์และโลก ทรงมีอีกพระนามว่า ทิว (Tiw)>
                 </p>
             </div>
         </div>
