--- a/EgyptHTML/Horus.html
+++ b/EgyptHTML/Horus.html
@@ -30,16 +30,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/egyptC.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้าอียิปต์</a>
+                        <a class="nav-link" href="../ChooseHTML/egyptC.html">เทพเจ้าอียิปต์</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
