--- a/GreekHTML/Aphodite.html
+++ b/GreekHTML/Aphodite.html
@@ -7,20 +7,15 @@
     <title>Aphodite</title>
     <link rel="stylesheet" href="Aphodite.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
@@ -34,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/greekC.html" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้ากรีก</a>
+                        <a class="nav-link" href="../ChooseHTML/greekC.html">เทพเจ้ากรีก</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -58,10 +53,11 @@
         <div class="page2">
             <img src="../Full-Design/Zeus1.jpg" class="img-fluid">
             <div class="container-fluid">
-                     <div class="topic">เทพีอโฟรไดท์ เทพีแห่งความงามและความรัก</div>
+                <div class="topic">เทพีอโฟรไดท์ เทพีแห่งความงามและความรัก</div>
                 <div class="row">
                     <div class="col-sm">
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; เทพีอะโฟรไดท์ หรือ เทพีวีนัส เป็นเทพีแห่งเทพปกรณัมโรมันที่มีความเกี่ยวข้องโดยตรงกับความรักและความงาม หรืออีกชื่อคือ อโพรไดท์ (Aphrodite) แห่งเทพปกรณัมกรีก พระนางเป็นชายาของเทพวัลคัน (Vulcan) หรือเฮฟเฟสตุสเทพแห่งงานช่าง เทพีวีนัสตามตำราว่าเกิดขึ้นเองจากฟองทะเล ด้วยพระนามของพระนาง อะโฟรไดท์ นั้น มาจากคำว่า ‘Aphros’ ที่แปลว่าฟอง 
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; เทพีอะโฟรไดท์ หรือ เทพีวีนัส เป็นเทพีแห่งเทพปกรณัมโรมันที่มีความเกี่ยวข้องโดยตรงกับความรักและความงาม หรืออีกชื่อคือ อโพรไดท์ (Aphrodite) แห่งเทพปกรณัมกรีก พระนางเป็นชายาของเทพวัลคัน (Vulcan)
+                        หรือเฮฟเฟสตุสเทพแห่งงานช่าง เทพีวีนัสตามตำราว่าเกิดขึ้นเองจากฟองทะเล ด้วยพระนามของพระนาง อะโฟรไดท์ นั้น มาจากคำว่า ‘Aphros’ ที่แปลว่าฟอง
                     </div>
                 </div>
             </div>
@@ -71,11 +67,13 @@
         <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
         <div class="container-fluid">
             <div class="boxtext2">
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>พระนางเกิดในทะเลใกล้เกาะไซเธอรา</b>และถูกคลื่นซัดไปยังเกาะไซปรัส แต่บางตำราว่าเป็นธิดาของเทพซุสที่เกิดจากจากนางอัปสรไดโอนี แต่ที่ตรงกันคือพระนางมีความงดงามที่ไม่มีใครเทียมได้แม้กระทั่งเทพธิดาด้วยกัน และสามารถสะกดใจผู้ชายทุกคนได้ภายในพริบตาแรกที่มองเห็นพระนาง อีกทั้งพระนางก็ชอบใจในความสวยงามของตนเองมากเสียด้วย พระนางจึงไม่ยอมเด็ดขาดหากใครจะกล้าล้ำเส้นเทพีความงามของพระนาง ด้วยแรงริษยาที่รุนแรงพอๆกับรูปโฉมสะสวยทำให้เทพีอโพรไดท์เป็นที่หวาดหวั่นของเทพหลายๆองค์
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>พระนางเกิดในทะเลใกล้เกาะไซเธอรา</b>และถูกคลื่นซัดไปยังเกาะไซปรัส แต่บางตำราว่าเป็นธิดาของเทพซุสที่เกิดจากจากนางอัปสรไดโอนี แต่ที่ตรงกันคือพระนางมีความงดงามที่ไม่มีใครเทียมได้แม้กระทั่งเทพธิดาด้วยกัน และสามารถสะกดใจผู้ชายทุกคนได้ภายในพริบตาแรกที่มองเห็นพระนาง
+                    อีกทั้งพระนางก็ชอบใจในความสวยงามของตนเองมากเสียด้วย พระนางจึงไม่ยอมเด็ดขาดหากใครจะกล้าล้ำเส้นเทพีความงามของพระนาง ด้วยแรงริษยาที่รุนแรงพอๆกับรูปโฉมสะสวยทำให้เทพีอโพรไดท์เป็นที่หวาดหวั่นของเทพหลายๆองค์
                 </p>
             </div>
             <div class="boxtext5">
-                <p> ในวันแรกที่เทพีวีนัสปรากฏตัวบนเขาโอลิมปัส เทพชายทุกองค์โดยเฉพาะเทพซุสเองก็อยากได้พระนางมาครอบครอง แต่เทพีอโพรไดท์ไม่ใช่หญิงสาวเรียบร้อยหัวอ่อนว่าง่าย ทำให้เทพซุสเกิดความโมโหและแก้เผ็ดพระนาง โดยจับพระนางแต่งงานกับเทพวัลแคนพระโอรสของพระองค์ ซึ่งเทพวัลแคนชอบขลุกอยู่ในโรงงาน ก่อสร้าง และประดิษฐ์สิ่งต่างๆเนื้อตัวมอมแมม แถมยังเป็นเทพขาเป๋ ทำให้เทพีอโพรไดท์โกรธเคืองอย่างมาก แต่พระนางก็กล้าทำในสิ่งที่เทพีอื่นๆ ไม่กล้า ซึ่งนั่นคือการคบชู้สู่ชายแบบตามใจชอบ
+                <p> ในวันแรกที่เทพีวีนัสปรากฏตัวบนเขาโอลิมปัส เทพชายทุกองค์โดยเฉพาะเทพซุสเองก็อยากได้พระนางมาครอบครอง แต่เทพีอโพรไดท์ไม่ใช่หญิงสาวเรียบร้อยหัวอ่อนว่าง่าย ทำให้เทพซุสเกิดความโมโหและแก้เผ็ดพระนาง โดยจับพระนางแต่งงานกับเทพวัลแคนพระโอรสของพระองค์
+                    ซึ่งเทพวัลแคนชอบขลุกอยู่ในโรงงาน ก่อสร้าง และประดิษฐ์สิ่งต่างๆเนื้อตัวมอมแมม แถมยังเป็นเทพขาเป๋ ทำให้เทพีอโพรไดท์โกรธเคืองอย่างมาก แต่พระนางก็กล้าทำในสิ่งที่เทพีอื่นๆ ไม่กล้า ซึ่งนั่นคือการคบชู้สู่ชายแบบตามใจชอบ
 
                 </p>
             </div>
@@ -90,8 +88,9 @@
 
         <div class="boxtext4">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <b
-                class="bold2">ตั้งแต่หลายศตวรรษที่ผ่านมา</b> ชาวยุโรปทั่วๆไปมีความเชื่อสืบทอดกันมาว่า เมื่อบ้านหนึ่งบ้านใดที่กำลังจะให้กำเนิดเด็กแรกเกิด เจ้าแม่อโฟรไดท์จะสั่งให้นกกระสามาบินวนเวียนอยู่เหนือหลังคาบ้านนั้น ซึ่งคติความเชื่อนี้ก็ถูกตีความกันต่อไปว่า หากนกกระสาได้มาบินวนเวียนเหนือบ้านที่กำลังจะมีเด็กเกิด เด็กคนนั้นจะสามารถคลอดออกจากครรภ์มารดาได้โดยง่าย และสามารถอยู่รอดปลอดภัยด้วย แต่ความจริงแล้ว คติความเชื่อนี้ก็เป็นเพียงข้ออ้างที่พ่อแม่ใช้ในการตอบคำถามลูกๆตอนโต  ว่าน้องเล็กของตนนั้นเกิดมาได้อย่างไร หรือเกิดมาจากอะไรเพียงเท่านั้น
+            <b class="bold2">ตั้งแต่หลายศตวรรษที่ผ่านมา</b> ชาวยุโรปทั่วๆไปมีความเชื่อสืบทอดกันมาว่า เมื่อบ้านหนึ่งบ้านใดที่กำลังจะให้กำเนิดเด็กแรกเกิด เจ้าแม่อโฟรไดท์จะสั่งให้นกกระสามาบินวนเวียนอยู่เหนือหลังคาบ้านนั้น ซึ่งคติความเชื่อนี้ก็ถูกตีความกันต่อไปว่า
+            หากนกกระสาได้มาบินวนเวียนเหนือบ้านที่กำลังจะมีเด็กเกิด เด็กคนนั้นจะสามารถคลอดออกจากครรภ์มารดาได้โดยง่าย และสามารถอยู่รอดปลอดภัยด้วย แต่ความจริงแล้ว คติความเชื่อนี้ก็เป็นเพียงข้ออ้างที่พ่อแม่ใช้ในการตอบคำถามลูกๆตอนโต ว่าน้องเล็กของตนนั้นเกิดมาได้อย่างไร
+            หรือเกิดมาจากอะไรเพียงเท่านั้น
 
         </div>
     </div>
@@ -105,8 +104,7 @@
                     <img src="https://www.img.in.th/images/b48bdb18267a30f7d7c292435393480c.jpg"
                         width="100" />
                 </label>
-                <img
-                    src="https://www.img.in.th/images/b48bdb18267a30f7d7c292435393480c.jpg" />
+                <img src="https://www.img.in.th/images/b48bdb18267a30f7d7c292435393480c.jpg" />
 
                 <!--Lets show the second image by default on page load-->
                 <input type="radio" name="slide_switch" id="id2" checked="checked" />
@@ -114,24 +112,21 @@
                     <img src="https://www.img.in.th/images/79e57730b76a88cbf084a113d2d1d7d8.jpg"
                         width="100" />
                 </label>
-                <img
-                    src="https://www.img.in.th/images/79e57730b76a88cbf084a113d2d1d7d8.jpg" />
+                <img src="https://www.img.in.th/images/79e57730b76a88cbf084a113d2d1d7d8.jpg" />
 
                 <input type="radio" name="slide_switch" id="id3" />
                 <label for="id3">
                     <img src="https://www.img.in.th/images/55561a97ee211ad6b4cd50699923d76a.jpg"
                         width="100" />
                 </label>
-                <img
-                    src="https://www.img.in.th/images/55561a97ee211ad6b4cd50699923d76a.jpg" />
+                <img src="https://www.img.in.th/images/55561a97ee211ad6b4cd50699923d76a.jpg" />
 
                 <input type="radio" name="slide_switch" id="id4" />
                 <label for="id4">
                     <img src="https://www.img.in.th/images/3702801c7e21a89e59fd7a3ef186be44.jpg"
                         width="100" />
                 </label>
-                <img
-                    src="https://www.img.in.th/images/3702801c7e21a89e59fd7a3ef186be44.jpg" />
+                <img src="https://www.img.in.th/images/3702801c7e21a89e59fd7a3ef186be44.jpg" />
 
 
                 <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
