--- a/GreekHTML/Ares.html
+++ b/GreekHTML/Ares.html
@@ -7,23 +7,18 @@
     <title>Ares</title>
     <link rel="stylesheet" href="Ares.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-</script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-</script>
-<link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
 </head>
 
 
@@ -34,16 +29,16 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/greekC.html" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้ากรีก</a>
+                        <a class="nav-link" href="../ChooseHTML/greekC.html">เทพเจ้ากรีก</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -52,89 +47,90 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             <div class="home">
                 <img src="../Full-Design/Ares.jpg" class="img-fluid">
             </div>
-        </div>
+    </div>
     </section>
     <section class="history" id="history">
         <div class="page2">
             <img src="../Full-Design/Zeus1.jpg" class="img-fluid">
             <div class="container-fluid">
-               <div class="topic">เทพอาเรส เทพเจ้าแห่งสงคราม อาวุธ และชุดเกราะ</div>
-               <div class="row">
-                <div class="col-sm">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; อาเรส หรือที่ชาวโรมันเรียกว่า มาร์ส (Mars) เป็นเทพเจ้าแห่งสงคราม อาวุธ และชุดเกราะ และ เป็นหนึ่งในสิบสองเทพแห่งโอลิมปัสด้วย
-                    อาเรส เป็นเทพแห่งการสงครามเช่นเดียวกับอธีน่า แต่ทว่าอธีน่าจะได้รับการยกย่องและบูชามากกว่า เนื่องจากอธีน่าเป็นเทพีที่ใช้สติปัญญาวางแผนในการสู้รบมากกว่า ซึ่งได้รับการบูชาในฐานะเทพีแห่งสติปัญญาด้วย ผิดกับอาเรสซึ่งมักจะใช้ความดุดันและโหดร้ายในการสงครามมากกว่า ซึ่งโฮเมอร์กวีเอกคนสำคัญของกรีกโบราณ ยังเคยเขียนถึงพระองค์ว่าเป็นเทพที่โหดร้ายและหยาบช้า
+                <div class="topic">เทพอาเรส เทพเจ้าแห่งสงคราม อาวุธ และชุดเกราะ</div>
+                <div class="row">
+                    <div class="col-sm">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; อาเรส หรือที่ชาวโรมันเรียกว่า มาร์ส (Mars) เป็นเทพเจ้าแห่งสงคราม อาวุธ และชุดเกราะ และ เป็นหนึ่งในสิบสองเทพแห่งโอลิมปัสด้วย อาเรส เป็นเทพแห่งการสงครามเช่นเดียวกับอธีน่า แต่ทว่าอธีน่าจะได้รับการยกย่องและบูชามากกว่า
+                        เนื่องจากอธีน่าเป็นเทพีที่ใช้สติปัญญาวางแผนในการสู้รบมากกว่า ซึ่งได้รับการบูชาในฐานะเทพีแห่งสติปัญญาด้วย ผิดกับอาเรสซึ่งมักจะใช้ความดุดันและโหดร้ายในการสงครามมากกว่า ซึ่งโฮเมอร์กวีเอกคนสำคัญของกรีกโบราณ ยังเคยเขียนถึงพระองค์ว่าเป็นเทพที่โหดร้ายและหยาบช้า
 
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<div class="page3">
-    <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
-    <div class="container-fluid">
-        <div class="boxtext2">
-            <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>อาเรสเป็นบุตรของซีอุส</b>มหาเทพและพระนางเฮรา มเหสีของซีอุส อาเรสเป็นเทพที่ชาวกรีกไม่นับถือบูชา เพราะถือว่าเป็นเทพที่โหดร้ายและมีเรื่องราวที่น่าอับอายเกี่ยวกับพระองค์เยอะ และถึงแม้จะเป็นเทพแห่งสงคราม อาเรสก็รบแพ้ในการสงครามหลายต่อหลายครั้ง ทั้งแก่มนุษย์กึ่งเทพเองอย่างเฮราคลีสและกับอธีน่า เทพีแห่งสงครามพี่น้องของพระองค์เอง
-            แต่อาเรสเป็นที่นับถืออย่างมากของชาวโรมัน ซึ่งเป็นชนเผ่าที่โปรดปรานการสู้รบถึงกับแต่งให้อาเรสเป็นบิดาของรอมิวลุส (Romulus) ผู้สร้างกรุงโรมเลยทีเดียว
-            </p>
+    </section>
+    <div class="page3">
+        <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
+        <div class="container-fluid">
+            <div class="boxtext2">
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>อาเรสเป็นบุตรของซีอุส</b>มหาเทพและพระนางเฮรา มเหสีของซีอุส อาเรสเป็นเทพที่ชาวกรีกไม่นับถือบูชา เพราะถือว่าเป็นเทพที่โหดร้ายและมีเรื่องราวที่น่าอับอายเกี่ยวกับพระองค์เยอะ และถึงแม้จะเป็นเทพแห่งสงคราม อาเรสก็รบแพ้ในการสงครามหลายต่อหลายครั้ง
+                    ทั้งแก่มนุษย์กึ่งเทพเองอย่างเฮราคลีสและกับอธีน่า เทพีแห่งสงครามพี่น้องของพระองค์เอง แต่อาเรสเป็นที่นับถืออย่างมากของชาวโรมัน ซึ่งเป็นชนเผ่าที่โปรดปรานการสู้รบถึงกับแต่งให้อาเรสเป็นบิดาของรอมิวลุส (Romulus) ผู้สร้างกรุงโรมเลยทีเดียว
+                </p>
+            </div>
+            <div class="boxtext5">
+                <p>ในทางด้านชู้สาว พระองค์ลักลอบมีชู้กับเทพีอโฟรไดท์จนเป็นเรื่องราวใหญ่โตให้อับอายไปทั้งสวรรค์ และเป็นอพอลโล เทพแห่งดวงอาทิตย์ ที่จับผิดและแก้ไขพฤติกรรมของทั้งคู่อาเรส เมื่อเสด็จไปไหนจะใช้รถศึกเทียมม้าฝีเท้าจัดมากมาย แสงเกราะและแสงศาตราวุธส่องแสงเจิดจ้าบาดตาผู้พบเห็น
+                </p>
+            </div>
         </div>
-        <div class="boxtext5">
-            <p>ในทางด้านชู้สาว พระองค์ลักลอบมีชู้กับเทพีอโฟรไดท์จนเป็นเรื่องราวใหญ่โตให้อับอายไปทั้งสวรรค์ และเป็นอพอลโล เทพแห่งดวงอาทิตย์ ที่จับผิดและแก้ไขพฤติกรรมของทั้งคู่อาเรส เมื่อเสด็จไปไหนจะใช้รถศึกเทียมม้าฝีเท้าจัดมากมาย แสงเกราะและแสงศาตราวุธส่องแสงเจิดจ้าบาดตาผู้พบเห็น 
-            </p>
+    </div>
+
+    <div class="page4">
+        <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
+        <div class="boxtext3">
+            <img src="../Full-Design/God-png/Ares.png" class="img-fluid">
+        </div>
+
+        <div class="boxtext4">
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <b class="bold2">อาเรสมีบริวารที่ติดสอยห้อยตามอยู่ 2 คน</b>คือ ดีมอส (Deimos) ซึ่งแปลว่าความกลัว กับ โฟมอส (Phobos) แปลว่าความน่าสยองขวัญ บางตำนานก็กล่าวว่า ทั้งดีมอสและโฟบอสเป็นบุตรชายฝาแฝดของอาเรส และชื่อของทั้งคู่ก็เป็นรากศัพท์ของคำว่าความตื่นตระหนก
+            (Panic) และ ความกลัว (Phobia) และในทางดาราศาสตร์ อาเรสหรือมาร์ส คือ ดาวอังคาร ดีมอส และโฟบอส ก็ถูกตั้งเป็นชื่อของดวงจันทร์บริวารของดาวอังคารด้วย
         </div>
     </div>
-</div>
+    <section class="pics" id="pics">
+        <div class="page6">
+            <img src="../Full-Design/Zeus4.jpg" class="img-fluid">
 
-<div class="page4">
-    <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
-    <div class="boxtext3">
-        <img src="../Full-Design/God-png/Ares.png" class="img-fluid">
-    </div>
-
-    <div class="boxtext4">
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <b class="bold2">อาเรสมีบริวารที่ติดสอยห้อยตามอยู่ 2 คน</b>คือ ดีมอส (Deimos) ซึ่งแปลว่าความกลัว กับ โฟมอส (Phobos) แปลว่าความน่าสยองขวัญ บางตำนานก็กล่าวว่า ทั้งดีมอสและโฟบอสเป็นบุตรชายฝาแฝดของอาเรส และชื่อของทั้งคู่ก็เป็นรากศัพท์ของคำว่าความตื่นตระหนก (Panic) และ ความกลัว (Phobia) และในทางดาราศาสตร์ อาเรสหรือมาร์ส คือ ดาวอังคาร  ดีมอส และโฟบอส  ก็ถูกตั้งเป็นชื่อของดวงจันทร์บริวารของดาวอังคารด้วย
-    </div>
-</div>
-<section class="pics" id="pics">
-    <div class="page6">
-        <img src="../Full-Design/Zeus4.jpg" class="img-fluid">
-
-        <div class="slider">
-            <input type="radio" name="slide_switch" id="id1" checked="checked"/>
-            <label for="id1">
+            <div class="slider">
+                <input type="radio" name="slide_switch" id="id1" checked="checked" />
+                <label for="id1">
                 <img src="https://sv1.picz.in.th/images/2019/11/15/gu2J9Z.jpg" alt="gu2J9Z.jpg" border="0">
             </label>
-           <img src="https://sv1.picz.in.th/images/2019/11/15/gu2J9Z.jpg" alt="gu2J9Z.jpg" border="0">
+                <img src="https://sv1.picz.in.th/images/2019/11/15/gu2J9Z.jpg" alt="gu2J9Z.jpg" border="0">
 
-            <!--Lets show the second image by default on page load-->
-            <input type="radio" name="slide_switch" id="id2"  />
-            <label for="id2">
+                <!--Lets show the second image by default on page load-->
+                <input type="radio" name="slide_switch" id="id2" />
+                <label for="id2">
                <img src="https://sv1.picz.in.th/images/2019/11/15/gu2vmu.jpg" alt="gu2vmu.jpg" border="0">
             </label>
-         <img src="https://sv1.picz.in.th/images/2019/11/15/gu2vmu.jpg" alt="gu2vmu.jpg" border="0">
+                <img src="https://sv1.picz.in.th/images/2019/11/15/gu2vmu.jpg" alt="gu2vmu.jpg" border="0">
 
-            <input type="radio" name="slide_switch" id="id3" />
-            <label for="id3">
+                <input type="radio" name="slide_switch" id="id3" />
+                <label for="id3">
                 <img src="https://sv1.picz.in.th/images/2019/11/15/gu2LbI.jpg" alt="gu2LbI.jpg" border="0">
             </label>
-          <img src="https://sv1.picz.in.th/images/2019/11/15/gu2LbI.jpg" alt="gu2LbI.jpg" border="0">
+                <img src="https://sv1.picz.in.th/images/2019/11/15/gu2LbI.jpg" alt="gu2LbI.jpg" border="0">
 
-            <input type="radio" name="slide_switch" id="id4" />
-            <label for="id4">
+                <input type="radio" name="slide_switch" id="id4" />
+                <label for="id4">
                 <img src="https://sv1.picz.in.th/images/2019/11/15/gu2epP.jpg" alt="gu2epP.jpg" border="0">
             </label>
-           <img src="https://sv1.picz.in.th/images/2019/11/15/gu2epP.jpg" alt="gu2epP.jpg" border="0">
+                <img src="https://sv1.picz.in.th/images/2019/11/15/gu2epP.jpg" alt="gu2epP.jpg" border="0">
 
                 <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
                     You can download it from https://leaverou.github.com/prefixfree/ -->
-                    <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>
+                <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>
 
-                </div>
-            </section>
-            <div class="page7">
-                <img src="../Full-Design/downZeus.jpg" class="img-fluid">
             </div>
+    </section>
+    <div class="page7">
+        <img src="../Full-Design/downZeus.jpg" class="img-fluid">
+    </div>
 
-        </body>
+</body>
 
-        </html>
+</html>
