--- a/GreekHTML/Hephaestus.html
+++ b/GreekHTML/Hephaestus.html
@@ -7,20 +7,15 @@
     <title>Hephaestus</title>
     <link rel="stylesheet" href="Aphodite.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
@@ -34,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/greekC.html" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้ากรีก</a>
+                        <a class="nav-link" href="../ChooseHTML/greekC.html">เทพเจ้ากรีก</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -58,10 +53,10 @@
         <div class="page2">
             <img src="../Full-Design/Zeus1.jpg" class="img-fluid">
             <div class="container-fluid">
-                     <div class="topic">ฮีเฟสตัส เทพแห่งไฟ โลหะและการช่าง</div>
+                <div class="topic">ฮีเฟสตัส เทพแห่งไฟ โลหะและการช่าง</div>
                 <div class="row">
                     <div class="col-sm">
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ฮีเฟสตัส  เทพแห่งไฟ โลหะ และการช่าง เป็นบุตรของซูส กับฮีรา (บางตำราว่าเป็นบุตรของฮีราผู้เดียว เพราะเกิดมาจากเศียรของฮีรา) พระองค์เป็นเทพที่พิการและอัปลักษณ์ ซึ่งอาจเกิดจากการที่ถูกซูสโยนลงจากสวรรค์เมื่อครั้งเข้าไปช่วยฮีราจากการทะเลาะกับซูส
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ฮีเฟสตัส เทพแห่งไฟ โลหะ และการช่าง เป็นบุตรของซูส กับฮีรา (บางตำราว่าเป็นบุตรของฮีราผู้เดียว เพราะเกิดมาจากเศียรของฮีรา) พระองค์เป็นเทพที่พิการและอัปลักษณ์ ซึ่งอาจเกิดจากการที่ถูกซูสโยนลงจากสวรรค์เมื่อครั้งเข้าไปช่วยฮีราจากการทะเลาะกับซูส
                     </div>
                 </div>
             </div>
@@ -71,15 +66,12 @@
         <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
         <div class="container-fluid">
             <div class="boxtext2">
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>เนื่องด้วยเหตุดังกล่าว</b> พระองค์จึงถูกพระบิดาและมารดาทอดทิ้ง อีกทั้งพระชายาคือเทพีอโพรไดท์ ยังดูแคลนจนกระทั่งไปมีชู้รักมากมาย รวมทั้งอนุชาร่วมอุทรของเทพฮีเฟสตัสเอง คือเทพอาเรส  จนมีโอรสธิดาหลายองค์ ซึ่งแน่นอนว่าไม่มีสายเลือดสวามีอัปลักษณ์องค์นี้แม้แต่องค์เดียว  ฮีเฟสตัสใช้เวลาช่วง 10 ปีแรกอยู่ในทะเล และได้สร้างโรงหล่อไว้ใต้ภูเขาไฟเอตนา มีไซคลอปส์เป็นคนงาน
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>เนื่องด้วยเหตุดังกล่าว</b> พระองค์จึงถูกพระบิดาและมารดาทอดทิ้ง อีกทั้งพระชายาคือเทพีอโพรไดท์ ยังดูแคลนจนกระทั่งไปมีชู้รักมากมาย รวมทั้งอนุชาร่วมอุทรของเทพฮีเฟสตัสเอง คือเทพอาเรส จนมีโอรสธิดาหลายองค์ ซึ่งแน่นอนว่าไม่มีสายเลือดสวามีอัปลักษณ์องค์นี้แม้แต่องค์เดียว
+                    ฮีเฟสตัสใช้เวลาช่วง 10 ปีแรกอยู่ในทะเล และได้สร้างโรงหล่อไว้ใต้ภูเขาไฟเอตนา มีไซคลอปส์เป็นคนงาน
                 </p>
             </div>
             <div class="boxtext5">
-                <p> โดยสิ่งที่พระองค์สร้างขึ้น มีดังนี้<br>
-                    - อาวุธของ อคิลลีส และ อีเนียส<br>
-                    - คทาของ อะกาเมมนอน<br>
-                    - สร้อยคอของ Harmonia ซึ่งผู้สวมใส่จะประสบเคราะห์ร้าย<br>
-                    - โล่ของ เฮราคลีส
+                <p> โดยสิ่งที่พระองค์สร้างขึ้น มีดังนี้<br> - อาวุธของ อคิลลีส และ อีเนียส<br> - คทาของ อะกาเมมนอน<br> - สร้อยคอของ Harmonia ซึ่งผู้สวมใส่จะประสบเคราะห์ร้าย<br> - โล่ของ เฮราคลีส
                 </p>
             </div>
         </div>
@@ -112,8 +104,7 @@
                 <label for="id2">
                     <img src="https://sv1.picz.in.th/images/2019/11/14/g2eIDt.jpg" alt="g2eIDt.jpg" border="0">
                 </label>
-                <img
-                    img src="https://sv1.picz.in.th/images/2019/11/14/g2eIDt.jpg" alt="g2eIDt.jpg" border="0">
+                <img img src="https://sv1.picz.in.th/images/2019/11/14/g2eIDt.jpg" alt="g2eIDt.jpg" border="0">
 
                 <input type="radio" name="slide_switch" id="id3" />
                 <label for="id3">
