--- a/GreekHTML/athena.html
+++ b/GreekHTML/athena.html
@@ -7,23 +7,18 @@
     <title>Athena</title>
     <link rel="stylesheet" href="hermes.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-</script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-</script>
-<link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
 </head>
 
 
@@ -34,16 +29,16 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/greekC.html" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้ากรีก</a>
+                        <a class="nav-link" href="../ChooseHTML/greekC.html">เทพเจ้ากรีก</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -52,97 +47,95 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             <div class="home">
                 <img src="../Full-Design/Athena.jpg" class="img-fluid">
             </div>
-        </div>
+    </div>
     </section>
     <section class="history" id="history">
         <div class="page2">
             <img src="../Full-Design/Zeus1.jpg" class="img-fluid">
             <div class="container-fluid">
-               <div class="topic">อธีน่า เทพีแห่งปัญญา</div>
-               <div class="row">
-                <div class="col-sm">
-                    <p> เทพีอธีนา 1 ใน 12 เทพแห่งโอลิมปัส เป็นเทพีแห่งปัญญา เนื่องจากเกิดมาจากส่วนหัวของ ซุส ประมุขแห่งเหล่าทวยเทพ ในขณะที่กำลังประชุมเหล่าเทพที่เทือกเขาโอลิมปัส เมื่อจู่ ๆ ซูสเกิดปวดศีรษะอย่างรุนแรง จึงได้ให้เฮเฟสตัส เทพแห่งการตีเหล็กใช้ขวานผ่าศีรษะออก ปรากฏเป็นอธีนาที่สวมชุดเกราะพร้อมหอกกระโดดออกมา   
-                    </p>
+                <div class="topic">อธีน่า เทพีแห่งปัญญา</div>
+                <div class="row">
+                    <div class="col-sm">
+                        <p> เทพีอธีนา 1 ใน 12 เทพแห่งโอลิมปัส เป็นเทพีแห่งปัญญา เนื่องจากเกิดมาจากส่วนหัวของ ซุส ประมุขแห่งเหล่าทวยเทพ ในขณะที่กำลังประชุมเหล่าเทพที่เทือกเขาโอลิมปัส เมื่อจู่ ๆ ซูสเกิดปวดศีรษะอย่างรุนแรง จึงได้ให้เฮเฟสตัส เทพแห่งการตีเหล็กใช้ขวานผ่าศีรษะออก
+                            ปรากฏเป็นอธีนาที่สวมชุดเกราะพร้อมหอกกระโดดออกมา
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<div class="page3">
-    <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
-    <div class="container-fluid">
-        <div class="boxtext2">
-            <p><b>เทพีอธีนาเป็นธิดาของเทพีเมทิส</b> ซึ่งถูกซูสกลืนเข้าไปในท้องตั้งแต่ยังมีครรภ์แก่ เนื่องจากคำทำนายที่ว่าบุตรที่เกิดจากนางจะเป็นผู้โค่นบัลลังก์ของซูส แต่แม้ว่าอธีนาจะถือกำเนิดมาพร้อมกับคำทำนายนั้น พระนางก็เป็นหนึ่งในลูกรักของซูส ว่ากันว่าฮีราอิจฉาอธีนาที่ถือตัวว่าเป็นผู้กำเนิดมาจากซูสโดยตรง  
+    </section>
+    <div class="page3">
+        <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
+        <div class="container-fluid">
+            <div class="boxtext2">
+                <p><b>เทพีอธีนาเป็นธิดาของเทพีเมทิส</b> ซึ่งถูกซูสกลืนเข้าไปในท้องตั้งแต่ยังมีครรภ์แก่ เนื่องจากคำทำนายที่ว่าบุตรที่เกิดจากนางจะเป็นผู้โค่นบัลลังก์ของซูส แต่แม้ว่าอธีนาจะถือกำเนิดมาพร้อมกับคำทำนายนั้น พระนางก็เป็นหนึ่งในลูกรักของซูส ว่ากันว่าฮีราอิจฉาอธีนาที่ถือตัวว่าเป็นผู้กำเนิดมาจากซูสโดยตรง
+            </div>
+            <div class="boxtext5">
+                <p>นอกจากอธีนาจะเป็นเทพีแห่งปัญญาแล้ว ยังเชื่อกันว่าพระนางเป็นเทพีแห่งสงครามด้วย เนื่องจากเทวรูปของพระนางมักปรากฏเป็นรูปผู้หญิงสวมชุดเกราะ ถือโล่ห์และหอกที่มือซ้าย และถือไนกี เทพีแห่งชัยชนะที่มือขวา โดยที่ชื่อกรุงเอเธนส์ เมืองหลวงของกรีซ
+                    ก็มีที่มาจากพระนามของนาง ชื่อเต็มของอธีนาคือ พัลลัสอธีนา (Pallas Athena)
+
+                </p>
+            </div>
         </div>
-        <div class="boxtext5">
-            <p>นอกจากอธีนาจะเป็นเทพีแห่งปัญญาแล้ว ยังเชื่อกันว่าพระนางเป็นเทพีแห่งสงครามด้วย เนื่องจากเทวรูปของพระนางมักปรากฏเป็นรูปผู้หญิงสวมชุดเกราะ ถือโล่ห์และหอกที่มือซ้าย และถือไนกี เทพีแห่งชัยชนะที่มือขวา โดยที่ชื่อกรุงเอเธนส์ เมืองหลวงของกรีซ ก็มีที่มาจากพระนามของนาง ชื่อเต็มของอธีนาคือ พัลลัสอธีนา (Pallas Athena)
-                
-            </p>
+    </div>
+
+    <div class="page4">
+        <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
+        <div class="boxtext3">
+            <img src="../Full-Design/God-png/Athena.png" class="img-fluid">
+        </div>
+
+        <div class="boxtext4">
+            <p>
+                <b class="bold2">อาจกล่าวได้ว่า</b> อธีนา เป็นเทพที่ชาวกรีกให้ความนับถือมากที่สุดก็ว่าได้ ในสมัยโบราณมีการสร้างมหาวิหารเพื่อถวายแด่พระนาง คือ วิหารพาเธนอนซึ่งตั้งอยู่ที่เนินอะโครโปลิส ที่กรุงเอเธนส์ในปัจจุบัน ในการท่องเที่ยวของกรีซ จะพบรูปปั้นขนาดเล็กของอธีนาขายเป็นที่ระลึกอยู่ทั่วไป
+                </p>
         </div>
     </div>
-</div>
+    <section class="pics" id="pics">
+        <div class="page6">
+            <img src="../Full-Design/Zeus4.jpg" class="img-fluid">
 
-<div class="page4">
-    <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
-    <div class="boxtext3">
-        <img src="../Full-Design/God-png/Athena.png" class="img-fluid">
-    </div>
-
-    <div class="boxtext4">
-        <p>
-        <b
-        class="bold2">อาจกล่าวได้ว่า</b> อธีนา เป็นเทพที่ชาวกรีกให้ความนับถือมากที่สุดก็ว่าได้ ในสมัยโบราณมีการสร้างมหาวิหารเพื่อถวายแด่พระนาง คือ วิหารพาเธนอนซึ่งตั้งอยู่ที่เนินอะโครโปลิส ที่กรุงเอเธนส์ในปัจจุบัน ในการท่องเที่ยวของกรีซ จะพบรูปปั้นขนาดเล็กของอธีนาขายเป็นที่ระลึกอยู่ทั่วไป    </p>
-    </div>
-</div>
-<section class="pics" id="pics">
-    <div class="page6">
-        <img src="../Full-Design/Zeus4.jpg" class="img-fluid">
-
-        <div class="slider">
-            <input type="radio" name="slide_switch" id="id1" />
-            <label for="id1">
+            <div class="slider">
+                <input type="radio" name="slide_switch" id="id1" />
+                <label for="id1">
                 <img src="https://i.imgur.com/zbyz7MP.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/zbyz7MP.jpg" />
+                <img src="https://i.imgur.com/zbyz7MP.jpg" />
 
-            <!--Lets show the second image by default on page load-->
-            <input type="radio" name="slide_switch" id="id2" checked="checked" />
-            <label for="id2">
+                <!--Lets show the second image by default on page load-->
+                <input type="radio" name="slide_switch" id="id2" checked="checked" />
+                <label for="id2">
                 <img src="https://i.imgur.com/o4R6Ydz.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/o4R6Ydz.jpg" />
+                <img src="https://i.imgur.com/o4R6Ydz.jpg" />
 
-            <input type="radio" name="slide_switch" id="id3" />
-            <label for="id3">
+                <input type="radio" name="slide_switch" id="id3" />
+                <label for="id3">
                 <img src="https://i.imgur.com/cmKF0im.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/cmKF0im.jpg" />
+                <img src="https://i.imgur.com/cmKF0im.jpg" />
 
-            <input type="radio" name="slide_switch" id="id4" />
-            <label for="id4">
+                <input type="radio" name="slide_switch" id="id4" />
+                <label for="id4">
                 <img src="https://i.imgur.com/ZNuoDdY.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/ZNuoDdY.jpg" />
+                <img src="https://i.imgur.com/ZNuoDdY.jpg" />
 
 
                 <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
                     You can download it from https://leaverou.github.com/prefixfree/ -->
-                    <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>
+                <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>
 
-                </div>
-            </section>
-            <div class="page7">
-                <img src="../Full-Design/downZeus.jpg" class="img-fluid">
             </div>
+    </section>
+    <div class="page7">
+        <img src="../Full-Design/downZeus.jpg" class="img-fluid">
+    </div>
 
-        </body>
+</body>
 
-        </html> 
+</html>
