--- a/GreekHTML/hermes.html
+++ b/GreekHTML/hermes.html
@@ -7,23 +7,18 @@
     <title>Hermes</title>
     <link rel="stylesheet" href="hermes.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-</script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-</script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-</script>
-<link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
+    <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
 </head>
 
 
@@ -34,16 +29,16 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/greekC.html" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้ากรีก</a>
+                        <a class="nav-link" href="../ChooseHTML/greekC.html">เทพเจ้ากรีก</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -52,101 +47,98 @@ integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQV
             <div class="home">
                 <img src="../Full-Design/Hermes.jpg" class="img-fluid">
             </div>
-        </div>
+    </div>
     </section>
     <section class="history" id="history">
         <div class="page2">
             <img src="../Full-Design/Zeus1.jpg" class="img-fluid">
             <div class="container-fluid">
-               <div class="topic text-center">เฮอร์มีส เทพแห่งการเปลี่ยนผ่านและเขตแดน</div>
-               <div class="row">
-                <div class="col-sm">
-                    <p> เฮอร์มีส (Hermes) เป็นบุตรของซุสกับนางเมยา (Maia) พระองค์เป็นเทพที่มีผู้รู้จักมาก คนมักจะนำรูปเทพองค์นี้หรือของวิเศษอย่างหนึ่งของพระองค์ คือ เกือกมีปีก มาแสดงเป็นเครื่องหมายถึงความเร็ว นอกจากเกือก หมวกและไม้ถืออันศักดิ์สิทธิ์ของพระองค์ก็มีปีกที่ทำให้พระองค์ไปได้เร็วยิ่งนัก 
-                หมวกและเกือกมีปีกนั้นเรียกว่า เพตตะซัส (Petasus) และทะเลเรีย (Talaria) เป็นของที่ได้รับประทานจากซุส ซึ่งโปรดให้พระองค์เป็นเทพพนักงานสื่อสารประจำพระองค์ ส่วนไม้ถือศักดิ์สิทธิ์ที่เรียกว่า กะดูเซียส (Caduceus) เดิมเป็นของเทพอะพอลโล  
-                    </p>
+                <div class="topic text-center">เฮอร์มีส เทพแห่งการเปลี่ยนผ่านและเขตแดน</div>
+                <div class="row">
+                    <div class="col-sm">
+                        <p> เฮอร์มีส (Hermes) เป็นบุตรของซุสกับนางเมยา (Maia) พระองค์เป็นเทพที่มีผู้รู้จักมาก คนมักจะนำรูปเทพองค์นี้หรือของวิเศษอย่างหนึ่งของพระองค์ คือ เกือกมีปีก มาแสดงเป็นเครื่องหมายถึงความเร็ว นอกจากเกือก หมวกและไม้ถืออันศักดิ์สิทธิ์ของพระองค์ก็มีปีกที่ทำให้พระองค์ไปได้เร็วยิ่งนัก
+                            หมวกและเกือกมีปีกนั้นเรียกว่า เพตตะซัส (Petasus) และทะเลเรีย (Talaria) เป็นของที่ได้รับประทานจากซุส ซึ่งโปรดให้พระองค์เป็นเทพพนักงานสื่อสารประจำพระองค์ ส่วนไม้ถือศักดิ์สิทธิ์ที่เรียกว่า กะดูเซียส (Caduceus) เดิมเป็นของเทพอะพอลโล
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</section>
-<div class="page3">
-    <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
-    <div class="container-fluid">
-        <div class="boxtext2">
-            <p><b>ครั้งหนึ่งเฮอร์มีสขโมยวัวอะพอลโลไป</b>  อะพอลโลรู้ระแคะระคาย จึงมาทวงถาม เฮอร์มีสตอนนั้นยังเยาว์ กลับย้อนถามอย่างหน้าตาเฉยว่า วัวอะไรที่ไหนกันพระองค์ไม่เคยเห็นและไม่เคยได้ยิน อะพอลโลก็ไปฟ้องเทพซุสเพื่อไกล่เกลี่ยให้เฮอร์มีสคืนวัวให้ เมื่ออะพอลโลได้วัวคืนแล้วก็ไม่ถือเทพผู้น้องแม้ว่าวัวจะขาดไป 2 ตัว 
-            </p>
+    </section>
+    <div class="page3">
+        <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
+        <div class="container-fluid">
+            <div class="boxtext2">
+                <p><b>ครั้งหนึ่งเฮอร์มีสขโมยวัวอะพอลโลไป</b> อะพอลโลรู้ระแคะระคาย จึงมาทวงถาม เฮอร์มีสตอนนั้นยังเยาว์ กลับย้อนถามอย่างหน้าตาเฉยว่า วัวอะไรที่ไหนกันพระองค์ไม่เคยเห็นและไม่เคยได้ยิน อะพอลโลก็ไปฟ้องเทพซุสเพื่อไกล่เกลี่ยให้เฮอร์มีสคืนวัวให้ เมื่ออะพอลโลได้วัวคืนแล้วก็ไม่ถือเทพผู้น้องแม้ว่าวัวจะขาดไป
+                    2 ตัว
+                </p>
+            </div>
+            <div class="boxtext5">
+                <p>
+                    อะพอลโลเห็นเฮอร์มีสมีพิณถือคันหนึ่งเรียกว่า ไลร์ (lyre)ก็อยากได้ จึงเอาไม้กะดูเซียสแลก ไม้ถือกะดูเซียสจึงเป็นของเฮอร์มีส ไม้กะดูเซียสนี้แต่เดิมเป็นไม้ถือมีปีก ต่อมาเฮอร์มีสไปพบงู 2 ตัวกำลังต่อสู้กันพระองค์เอาไม้ทิ่มเข้าในระหว่างกลางเพื่อห้าม งูก็เลื้อยขึ้นมาพันอยู่กับไม้โดยหันหัวเข้าหากัน
+                    ตั้งแต่นั้นมางูก็พันอยู่กับไม้ถือกะดูเซียสตลอด และกลายเป็นสัญลักษณ์ของความเป็นกลาง
+
+                </p>
+            </div>
         </div>
-        <div class="boxtext5">
+    </div>
+
+    <div class="page4">
+        <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
+        <div class="boxtext3">
+            <img src="../Full-Design/God-png/hermesS.png" class="img-fluid">
+        </div>
+
+        <div class="boxtext4">
             <p>
-                อะพอลโลเห็นเฮอร์มีสมีพิณถือคันหนึ่งเรียกว่า ไลร์ (lyre)ก็อยากได้ จึงเอาไม้กะดูเซียสแลก ไม้ถือกะดูเซียสจึงเป็นของเฮอร์มีส ไม้กะดูเซียสนี้แต่เดิมเป็นไม้ถือมีปีก ต่อมาเฮอร์มีสไปพบงู 2 ตัวกำลังต่อสู้กันพระองค์เอาไม้ทิ่มเข้าในระหว่างกลางเพื่อห้าม งูก็เลื้อยขึ้นมาพันอยู่กับไม้โดยหันหัวเข้าหากัน ตั้งแต่นั้นมางูก็พันอยู่กับไม้ถือกะดูเซียสตลอด และกลายเป็นสัญลักษณ์ของความเป็นกลาง
-                
+                <b class="bold2">สิ่งที่น่าแปลกอีกประการหนึ่งคือ</b> แม้ว่าพระองค์จะเป็นโอรสของซุสกับเมยา (Maia) แต่ทรงเป็นโอรสองค์เดียวของซุสที่เทพีเฮราไม่เกลียดชัง กลับเรียกหาให้อยู่ใกล้ๆ ทั้งนี้อาจเป็นเพราะบุคลิกและนิสัยของเทพเฮอร์มีสที่ชอบช่วยเหลือทุกคน
             </p>
         </div>
     </div>
-</div>
+    <section class="pics" id="pics">
+        <div class="page6">
+            <img src="../Full-Design/Zeus4.jpg" class="img-fluid">
 
-<div class="page4">
-    <img src="../Full-Design/Zeus3.jpg" class="img-fluid">
-    <div class="boxtext3">
-        <img src="../Full-Design/God-png/hermesS.png" class="img-fluid">
-    </div>
-
-    <div class="boxtext4">
-        <p>
-        <b
-        class="bold2">สิ่งที่น่าแปลกอีกประการหนึ่งคือ</b> แม้ว่าพระองค์จะเป็นโอรสของซุสกับเมยา (Maia) แต่ทรงเป็นโอรสองค์เดียวของซุสที่เทพีเฮราไม่เกลียดชัง กลับเรียกหาให้อยู่ใกล้ๆ ทั้งนี้อาจเป็นเพราะบุคลิกและนิสัยของเทพเฮอร์มีสที่ชอบช่วยเหลือทุกคน 
-    </p>
-    </div>
-</div>
-<section class="pics" id="pics">
-    <div class="page6">
-        <img src="../Full-Design/Zeus4.jpg" class="img-fluid">
-
-        <div class="slider">
-            <input type="radio" name="slide_switch" id="id1" />
-            <label for="id1">
+            <div class="slider">
+                <input type="radio" name="slide_switch" id="id1" />
+                <label for="id1">
                 <img src="https://i.imgur.com/N4VLSh5.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/N4VLSh5.jpg" />
+                <img src="https://i.imgur.com/N4VLSh5.jpg" />
 
-            <!--Lets show the second image by default on page load-->
-            <input type="radio" name="slide_switch" id="id2" checked="checked" />
-            <label for="id2">
+                <!--Lets show the second image by default on page load-->
+                <input type="radio" name="slide_switch" id="id2" checked="checked" />
+                <label for="id2">
                 <img src="https://i.imgur.com/4XwEQz5.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/4XwEQz5.jpg" />
+                <img src="https://i.imgur.com/4XwEQz5.jpg" />
 
-            <input type="radio" name="slide_switch" id="id3" />
-            <label for="id3">
+                <input type="radio" name="slide_switch" id="id3" />
+                <label for="id3">
                 <img src="https://i.imgur.com/ArLtX1X.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/ArLtX1X.jpg" />
+                <img src="https://i.imgur.com/ArLtX1X.jpg" />
 
-            <input type="radio" name="slide_switch" id="id4" />
-            <label for="id4">
+                <input type="radio" name="slide_switch" id="id4" />
+                <label for="id4">
                 <img src="https://i.imgur.com/PVGo7L7.jpg"
                 width="100" />
             </label>
-            <img
-            src="https://i.imgur.com/PVGo7L7.jpg" />
+                <img src="https://i.imgur.com/PVGo7L7.jpg" />
 
 
                 <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
                     You can download it from https://leaverou.github.com/prefixfree/ -->
-                    <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>
+                <script src="http://thecodeplayer.com/uploads/js/prefixfree.js" type="text/javascript"></script>
 
-                </div>
-            </section>
-            <div class="page7">
-                <img src="../Full-Design/downZeus.jpg" class="img-fluid">
             </div>
+    </section>
+    <div class="page7">
+        <img src="../Full-Design/downZeus.jpg" class="img-fluid">
+    </div>
 
-        </body>
+</body>
 
-        </html> 
+</html>
