--- a/GreekHTML/poseidon.html
+++ b/GreekHTML/poseidon.html
@@ -7,20 +7,15 @@
     <title>Poseidon</title>
     <link rel="stylesheet" href="zeus.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
@@ -34,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/greekC.html" style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้ากรีก</a>
+                        <a class="nav-link" href="../ChooseHTML/greekC.html">เทพเจ้ากรีก</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -58,10 +53,10 @@
         <div class="page2">
             <img src="../Full-Design/Zeus1.jpg" class="img-fluid">
             <div class="container-fluid">
-                     <div class="topic">โพเซดอน เทพเจ้าแห่งท้องทะเลและมหาสมุทร</div>
+                <div class="topic">โพเซดอน เทพเจ้าแห่งท้องทะเลและมหาสมุทร</div>
                 <div class="row">
                     <div class="col-sm">
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; โพไซดอน เทพเจ้าแห่งท้องทะเลและมหาสมุทร ผู้ปกครองดินแดนแห่งท้องน้ำ ตั้งแต่แหล่งน้ำจืด เช่น แม่น้ำ ลำคลอง จนถึงใต้บาดาล มีตรีศูลเป็นอาวุธ บางตำนานกล่าวว่ามีท่อนล่างเป็นปลา  นอกจากนี้แล้วยังถือว่าเป็นเทพแห่งแผ่นดินไหวและเป็นเทพแห่งม้าด้วย  
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; โพไซดอน เทพเจ้าแห่งท้องทะเลและมหาสมุทร ผู้ปกครองดินแดนแห่งท้องน้ำ ตั้งแต่แหล่งน้ำจืด เช่น แม่น้ำ ลำคลอง จนถึงใต้บาดาล มีตรีศูลเป็นอาวุธ บางตำนานกล่าวว่ามีท่อนล่างเป็นปลา นอกจากนี้แล้วยังถือว่าเป็นเทพแห่งแผ่นดินไหวและเป็นเทพแห่งม้าด้วย
                     </div>
                 </div>
             </div>
@@ -71,12 +66,14 @@
         <img src="../Full-Design/Zeus2.jpg" class="img-fluid">
         <div class="container-fluid">
             <div class="boxtext2">
-                <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>รูปลักษณ์ของโพเซดอน</b>ส่วนมากจะปรากฏเป็นชายวัยกลางคน รูปร่างกำยำล่ำสัน มีหนวดเคราถือสามง่ามเป็นอาวุธ ซึ่งสามง่ามนี้มีอิทธิฤทธิ์มาก สามารถดลบันดาลให้เกิดทะเลคลั่งหรือแผ่นดินไหวได้ ครั้งหนึ่งโพเซดอนเคยคิดที่จะโค่นอำนาจของซุสโดยร่วมมือกับเฮรา และ อะธีนา แต่ก็ไม่สำเร็จจึงถูกซุสลงโทษ โดยการให้ไปสร้างกำแพงเมืองทรอยร่วมกับอพอลโลด้วยเช่นกัน
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>รูปลักษณ์ของโพเซดอน</b>ส่วนมากจะปรากฏเป็นชายวัยกลางคน รูปร่างกำยำล่ำสัน มีหนวดเคราถือสามง่ามเป็นอาวุธ ซึ่งสามง่ามนี้มีอิทธิฤทธิ์มาก สามารถดลบันดาลให้เกิดทะเลคลั่งหรือแผ่นดินไหวได้ ครั้งหนึ่งโพเซดอนเคยคิดที่จะโค่นอำนาจของซุสโดยร่วมมือกับเฮรา
+                    และ อะธีนา แต่ก็ไม่สำเร็จจึงถูกซุสลงโทษ โดยการให้ไปสร้างกำแพงเมืองทรอยร่วมกับอพอลโลด้วยเช่นกัน
                 </p>
             </div>
             <div class="boxtext5">
-                <p> โพเซดอนมีมเหสีองค์หนึ่งคือแอมฟิไทรท์ ซึ่งเป็น นีริอิด หรือบุตรสาวของ นีริอัส และ ดอริส  โพไซดอนเห็นนางตอนกำลังเต้นรำร่วมกับเหล่านีริอิดอื่นๆ จึงได้ทำการลักพาตัวนางไปเป็นชายาในดินแดนใต้สมุทร
-                และชายาอีกองค์หนึ่งของโพไซดอนเป็นหญิงรับใช้ของอะธีนา คือ เมดูซ่า เพราะหลงใหลในความงามของเมดูซ่า แต่เมื่ออะธีนาทราบเรื่องจึงสาบเมดูซ่าให้เป็นปีศาจที่มีผมเป็นงู และเมื่อมองใครก็จะกลายเป็นหินไปหมด เมื่อเปอร์ซิอุสได้ทำการตัดศีรษะของเมดูซ่าแล้ว เลือดของเมดูซ่าที่กระเซ็นออกมา กลายเป็นม้าบินสองตัว คือ เพกาซัส (Pegasus) และ คริสซาออร์ (Chrysaor) 
+                <p> โพเซดอนมีมเหสีองค์หนึ่งคือแอมฟิไทรท์ ซึ่งเป็น นีริอิด หรือบุตรสาวของ นีริอัส และ ดอริส โพไซดอนเห็นนางตอนกำลังเต้นรำร่วมกับเหล่านีริอิดอื่นๆ จึงได้ทำการลักพาตัวนางไปเป็นชายาในดินแดนใต้สมุทร และชายาอีกองค์หนึ่งของโพไซดอนเป็นหญิงรับใช้ของอะธีนา
+                    คือ เมดูซ่า เพราะหลงใหลในความงามของเมดูซ่า แต่เมื่ออะธีนาทราบเรื่องจึงสาบเมดูซ่าให้เป็นปีศาจที่มีผมเป็นงู และเมื่อมองใครก็จะกลายเป็นหินไปหมด เมื่อเปอร์ซิอุสได้ทำการตัดศีรษะของเมดูซ่าแล้ว เลือดของเมดูซ่าที่กระเซ็นออกมา กลายเป็นม้าบินสองตัว
+                    คือ เพกาซัส (Pegasus) และ คริสซาออร์ (Chrysaor)
 
                 </p>
             </div>
@@ -91,9 +88,8 @@
 
         <div class="boxtext4">
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <b
-                class="bold2">ดังนั้นจึงถือว่า</b> ทั้งเพกาซัสและคริสซาออร์เป็นลูกของโพเซดอนด้วย
-                โพเซดอน มีพาหนะเป็นม้าน้ำเทียมรถ ที่มีส่วนบนเป็นม้าและท่อนล่างเป็นปลา ซึ่งบางครั้งจะพบรูปโพเซดอนอยู่บนรถเทียมม้าน้ำนี้ขึ้นมาจากทะเลในสมัยโบราณ ที่แหลมสุนิอ้อน ห่างจาก กรุงเอเธนส์ เมืองหลวงของกรีซไม่มาก มีวิหารที่สร้างถวายแด่โพเซดอนอยู่
+            <b class="bold2">ดังนั้นจึงถือว่า</b> ทั้งเพกาซัสและคริสซาออร์เป็นลูกของโพเซดอนด้วย โพเซดอน มีพาหนะเป็นม้าน้ำเทียมรถ ที่มีส่วนบนเป็นม้าและท่อนล่างเป็นปลา ซึ่งบางครั้งจะพบรูปโพเซดอนอยู่บนรถเทียมม้าน้ำนี้ขึ้นมาจากทะเลในสมัยโบราณ ที่แหลมสุนิอ้อน
+            ห่างจาก กรุงเอเธนส์ เมืองหลวงของกรีซไม่มาก มีวิหารที่สร้างถวายแด่โพเซดอนอยู่
 
 
         </div>
@@ -108,8 +104,8 @@
                     <img src="https://lh3.googleusercontent.com/oZlc2SB25VylwBkGnlXnT1m1jjernASLsA6AIUTRLCkKHLrAW2Eb7GcTcYYtpcBu6rLlXK7W95WdeqjEo_3rmPATQ6-33YS_Hc4s4f9Kn_LOWGrpN2dm75d98RAn3-jdYka1QSRCV7V2TpaLczSS-H--Y70YrhoC4KlbGHyU9iA5z1qCIIG1Eie_9vnY4mzFofcxn-CT3kbFdl5xt31zVH9hEp2_4Qaj5T6Ag3CnDO32HPgUpm_AeD5GLTyZaGCIXv2phhjwvYwn2krbyMN0R6yYZfL0uCzqdJg58sjlirIZz-o8pNdHAIsI99-EsDbH6xMePzNSeLWca78zKR8-2WYMxsKYHWklt51v7XiqYpBA50IIfAhosPZ1xUatniwELi1qt0dzZMiOe9xgqyenAAFr3N_Z3VDAugFaevu8M4T7KF5kje4NcUjgaU4yCo_10Sx_1UzA_Qe5DY5PZWIoTeqQIuG4hzVIiI7RCVSwkuUWidY8XU20ySXb6zmFNIZYVji59uLDSP35chnbGWiiculnV4PE3ykfRqa6zOwJxvAB1lzyog3SBIi4euIlPWPse0Z9HgE8k-yf4kg-T6j_xbGdwJ2FVw_qoK0EfIsYdMB_T8hCOIWCUQI4Vpv7KEqzVp03sitflqLzvtyEplBVYWpbgvVwiF8Ard97l6QKVKhLR5zj6bzFj3r_=w640-h320-no"
                         width="100" />
                 </label>
-                <img
-                    src="https://lh3.googleusercontent.com/oZlc2SB25VylwBkGnlXnT1m1jjernASLsA6AIUTRLCkKHLrAW2Eb7GcTcYYtpcBu6rLlXK7W95WdeqjEo_3rmPATQ6-33YS_Hc4s4f9Kn_LOWGrpN2dm75d98RAn3-jdYka1QSRCV7V2TpaLczSS-H--Y70YrhoC4KlbGHyU9iA5z1qCIIG1Eie_9vnY4mzFofcxn-CT3kbFdl5xt31zVH9hEp2_4Qaj5T6Ag3CnDO32HPgUpm_AeD5GLTyZaGCIXv2phhjwvYwn2krbyMN0R6yYZfL0uCzqdJg58sjlirIZz-o8pNdHAIsI99-EsDbH6xMePzNSeLWca78zKR8-2WYMxsKYHWklt51v7XiqYpBA50IIfAhosPZ1xUatniwELi1qt0dzZMiOe9xgqyenAAFr3N_Z3VDAugFaevu8M4T7KF5kje4NcUjgaU4yCo_10Sx_1UzA_Qe5DY5PZWIoTeqQIuG4hzVIiI7RCVSwkuUWidY8XU20ySXb6zmFNIZYVji59uLDSP35chnbGWiiculnV4PE3ykfRqa6zOwJxvAB1lzyog3SBIi4euIlPWPse0Z9HgE8k-yf4kg-T6j_xbGdwJ2FVw_qoK0EfIsYdMB_T8hCOIWCUQI4Vpv7KEqzVp03sitflqLzvtyEplBVYWpbgvVwiF8Ard97l6QKVKhLR5zj6bzFj3r_=w640-h320-no" />
+                <img src="https://lh3.googleusercontent.com/oZlc2SB25VylwBkGnlXnT1m1jjernASLsA6AIUTRLCkKHLrAW2Eb7GcTcYYtpcBu6rLlXK7W95WdeqjEo_3rmPATQ6-33YS_Hc4s4f9Kn_LOWGrpN2dm75d98RAn3-jdYka1QSRCV7V2TpaLczSS-H--Y70YrhoC4KlbGHyU9iA5z1qCIIG1Eie_9vnY4mzFofcxn-CT3kbFdl5xt31zVH9hEp2_4Qaj5T6Ag3CnDO32HPgUpm_AeD5GLTyZaGCIXv2phhjwvYwn2krbyMN0R6yYZfL0uCzqdJg58sjlirIZz-o8pNdHAIsI99-EsDbH6xMePzNSeLWca78zKR8-2WYMxsKYHWklt51v7XiqYpBA50IIfAhosPZ1xUatniwELi1qt0dzZMiOe9xgqyenAAFr3N_Z3VDAugFaevu8M4T7KF5kje4NcUjgaU4yCo_10Sx_1UzA_Qe5DY5PZWIoTeqQIuG4hzVIiI7RCVSwkuUWidY8XU20ySXb6zmFNIZYVji59uLDSP35chnbGWiiculnV4PE3ykfRqa6zOwJxvAB1lzyog3SBIi4euIlPWPse0Z9HgE8k-yf4kg-T6j_xbGdwJ2FVw_qoK0EfIsYdMB_T8hCOIWCUQI4Vpv7KEqzVp03sitflqLzvtyEplBVYWpbgvVwiF8Ard97l6QKVKhLR5zj6bzFj3r_=w640-h320-no"
+                />
 
                 <!--Lets show the second image by default on page load-->
                 <input type="radio" name="slide_switch" id="id2" checked="checked" />
@@ -117,24 +113,24 @@
                     <img src="https://lh3.googleusercontent.com/T9r2vQQFJ7SXhWws_FZK3G-pDP0n5etGvKfS-ddUMJu2tdmuFmKZVYiF2PlYwd84GcW9OCB-PKKZo95oFj2ANJDoa81-NbVD6xR9Pk47JG66WRQDPdVyZ_9NWZFzLex2CYPbeETedIjQQkOZ77zZR1jGif7zgONj6sSY1xFySeOneBPcM45V43MzN4pdlLbKgUGCMJQWo8QpY4k7E0M_oBS2-OcsGVWa5qXHHuVfSM3nHesc2hmjbxTqB0Pq93PY8uYAbk0yd_vWlpOVetdRGifnELvzuixw9GGf6LWDF9wTh1wnhnx__uJbcnZJoh9M3s9THqnlftIiJA5vA5FzvYg9_M9J_penMwOg791T504jOrNDWjHalBnbf7ehofZWWtdPi68MW9ATD8qSchIPhh1kDWrSqLRQUgw_DBwc5bOd1jUzHu_BE3eU83HUrSms5s0MfUxPhMp-im70zbmKwfYWy5EGkn4cjVoCUczf0bYYGv546o4OlDhdNs_AcDX9vrL1iBcx0Lwk2DsPycXPRUfEnXEcpYyuCDBZW_pQY5UKjxZSVKzopLkkiFg4TyMNgVATyYi6KjobsbhEiZ4MR5yQ0L6zidf9nag_S0LfMjsbT3iSQiuI-o58cD8daH1HNGqzdNcHiPAT_5PYJs1uyzegOUnyKBMz5TfbmS7LB0QilHf1ZV58ERW-=w640-h320-no"
                         width="100" />
                 </label>
-                <img
-                    src="https://lh3.googleusercontent.com/T9r2vQQFJ7SXhWws_FZK3G-pDP0n5etGvKfS-ddUMJu2tdmuFmKZVYiF2PlYwd84GcW9OCB-PKKZo95oFj2ANJDoa81-NbVD6xR9Pk47JG66WRQDPdVyZ_9NWZFzLex2CYPbeETedIjQQkOZ77zZR1jGif7zgONj6sSY1xFySeOneBPcM45V43MzN4pdlLbKgUGCMJQWo8QpY4k7E0M_oBS2-OcsGVWa5qXHHuVfSM3nHesc2hmjbxTqB0Pq93PY8uYAbk0yd_vWlpOVetdRGifnELvzuixw9GGf6LWDF9wTh1wnhnx__uJbcnZJoh9M3s9THqnlftIiJA5vA5FzvYg9_M9J_penMwOg791T504jOrNDWjHalBnbf7ehofZWWtdPi68MW9ATD8qSchIPhh1kDWrSqLRQUgw_DBwc5bOd1jUzHu_BE3eU83HUrSms5s0MfUxPhMp-im70zbmKwfYWy5EGkn4cjVoCUczf0bYYGv546o4OlDhdNs_AcDX9vrL1iBcx0Lwk2DsPycXPRUfEnXEcpYyuCDBZW_pQY5UKjxZSVKzopLkkiFg4TyMNgVATyYi6KjobsbhEiZ4MR5yQ0L6zidf9nag_S0LfMjsbT3iSQiuI-o58cD8daH1HNGqzdNcHiPAT_5PYJs1uyzegOUnyKBMz5TfbmS7LB0QilHf1ZV58ERW-=w640-h320-no" />
+                <img src="https://lh3.googleusercontent.com/T9r2vQQFJ7SXhWws_FZK3G-pDP0n5etGvKfS-ddUMJu2tdmuFmKZVYiF2PlYwd84GcW9OCB-PKKZo95oFj2ANJDoa81-NbVD6xR9Pk47JG66WRQDPdVyZ_9NWZFzLex2CYPbeETedIjQQkOZ77zZR1jGif7zgONj6sSY1xFySeOneBPcM45V43MzN4pdlLbKgUGCMJQWo8QpY4k7E0M_oBS2-OcsGVWa5qXHHuVfSM3nHesc2hmjbxTqB0Pq93PY8uYAbk0yd_vWlpOVetdRGifnELvzuixw9GGf6LWDF9wTh1wnhnx__uJbcnZJoh9M3s9THqnlftIiJA5vA5FzvYg9_M9J_penMwOg791T504jOrNDWjHalBnbf7ehofZWWtdPi68MW9ATD8qSchIPhh1kDWrSqLRQUgw_DBwc5bOd1jUzHu_BE3eU83HUrSms5s0MfUxPhMp-im70zbmKwfYWy5EGkn4cjVoCUczf0bYYGv546o4OlDhdNs_AcDX9vrL1iBcx0Lwk2DsPycXPRUfEnXEcpYyuCDBZW_pQY5UKjxZSVKzopLkkiFg4TyMNgVATyYi6KjobsbhEiZ4MR5yQ0L6zidf9nag_S0LfMjsbT3iSQiuI-o58cD8daH1HNGqzdNcHiPAT_5PYJs1uyzegOUnyKBMz5TfbmS7LB0QilHf1ZV58ERW-=w640-h320-no"
+                />
 
                 <input type="radio" name="slide_switch" id="id3" />
                 <label for="id3">
                     <img src="https://lh3.googleusercontent.com/_slhyZD_ggq7cey9czOTrNAgktsVSsjsAO3_thHjzTq4xDV9GaybG1DutFggREb0XOztovq4S2DK5hkZEuUOssUD9CqOS_EZ7c_x4q-XsR2COzn19efocmjc32L5NxuGAv1_G9bvWaKyI7EegnUxB6M6YsX6hTNbhdn0su7kN5y1TzbdqVI_1iGbLJ59pWGmNpsneHI2y4RmDKGSgF3YDxUvlR22WxxofKNmTEoRy2IGn8-n_Ur39I5-xvWmQn_nvWQE1jU9XXGIegQBVHb1_27KurK0kE2g9oJnlkl5z1dg7kaX3VWhZIgb57W79NDGh3c5SZbrlJT2jQbFjVaaW4lx9pEZhAiz0h8F1PQyUXQV1YdgFEYN6SyPN9t7oWlHU7JZuVCdoe8ha64vMZ11-jSWevQWHW7C4JdusQ9aRihxETUvhWshuqB8JsK8VKGVX3jiNtTpuLdZeeyQoSndJTsWGpTicG2_pAIfoqG6epyX4P7UckIBBcdlVk8DBimv_VmnD8UjCUkDa9DbcGlhQaLmuZeMnLYFSSYDNzImA2jwnRl3PgCMg7ji4I06PIJZ0oIVa6bHOuxsBcZszI3-sTVNXWqut64aGY5CTEMCynzTn2df_YrTXBUcK95bev2-J_SUf8zaDVFNYTEljur_raNxHKV0EYxSzYOYwB03dYlRlLTQZBzI77xd=w640-h320-no"
                         width="100" />
                 </label>
-                <img
-                    src="https://lh3.googleusercontent.com/_slhyZD_ggq7cey9czOTrNAgktsVSsjsAO3_thHjzTq4xDV9GaybG1DutFggREb0XOztovq4S2DK5hkZEuUOssUD9CqOS_EZ7c_x4q-XsR2COzn19efocmjc32L5NxuGAv1_G9bvWaKyI7EegnUxB6M6YsX6hTNbhdn0su7kN5y1TzbdqVI_1iGbLJ59pWGmNpsneHI2y4RmDKGSgF3YDxUvlR22WxxofKNmTEoRy2IGn8-n_Ur39I5-xvWmQn_nvWQE1jU9XXGIegQBVHb1_27KurK0kE2g9oJnlkl5z1dg7kaX3VWhZIgb57W79NDGh3c5SZbrlJT2jQbFjVaaW4lx9pEZhAiz0h8F1PQyUXQV1YdgFEYN6SyPN9t7oWlHU7JZuVCdoe8ha64vMZ11-jSWevQWHW7C4JdusQ9aRihxETUvhWshuqB8JsK8VKGVX3jiNtTpuLdZeeyQoSndJTsWGpTicG2_pAIfoqG6epyX4P7UckIBBcdlVk8DBimv_VmnD8UjCUkDa9DbcGlhQaLmuZeMnLYFSSYDNzImA2jwnRl3PgCMg7ji4I06PIJZ0oIVa6bHOuxsBcZszI3-sTVNXWqut64aGY5CTEMCynzTn2df_YrTXBUcK95bev2-J_SUf8zaDVFNYTEljur_raNxHKV0EYxSzYOYwB03dYlRlLTQZBzI77xd=w640-h320-no" />
+                <img src="https://lh3.googleusercontent.com/_slhyZD_ggq7cey9czOTrNAgktsVSsjsAO3_thHjzTq4xDV9GaybG1DutFggREb0XOztovq4S2DK5hkZEuUOssUD9CqOS_EZ7c_x4q-XsR2COzn19efocmjc32L5NxuGAv1_G9bvWaKyI7EegnUxB6M6YsX6hTNbhdn0su7kN5y1TzbdqVI_1iGbLJ59pWGmNpsneHI2y4RmDKGSgF3YDxUvlR22WxxofKNmTEoRy2IGn8-n_Ur39I5-xvWmQn_nvWQE1jU9XXGIegQBVHb1_27KurK0kE2g9oJnlkl5z1dg7kaX3VWhZIgb57W79NDGh3c5SZbrlJT2jQbFjVaaW4lx9pEZhAiz0h8F1PQyUXQV1YdgFEYN6SyPN9t7oWlHU7JZuVCdoe8ha64vMZ11-jSWevQWHW7C4JdusQ9aRihxETUvhWshuqB8JsK8VKGVX3jiNtTpuLdZeeyQoSndJTsWGpTicG2_pAIfoqG6epyX4P7UckIBBcdlVk8DBimv_VmnD8UjCUkDa9DbcGlhQaLmuZeMnLYFSSYDNzImA2jwnRl3PgCMg7ji4I06PIJZ0oIVa6bHOuxsBcZszI3-sTVNXWqut64aGY5CTEMCynzTn2df_YrTXBUcK95bev2-J_SUf8zaDVFNYTEljur_raNxHKV0EYxSzYOYwB03dYlRlLTQZBzI77xd=w640-h320-no"
+                />
 
                 <input type="radio" name="slide_switch" id="id4" />
                 <label for="id4">
                     <img src="https://lh3.googleusercontent.com/AXvIr-Yku83dsPvEPnbCgeA7vyRp-bdQtg7XCSwpyqaAgIhyRfz3lVDnvjr2s8565YjAIBIe46WdssbQW-rVwE4Dvuus4tp3RQd_-LxyfZgG5pijE_e8bcXmmWoUUPTvfougVnTsUMnfUXhf2UtlGeRPwInpeMKg7uOqc1yZjHN-IchMxQq8qwY_sKbra8SHMzK8UMj95p8QMffwk9wn8HCNrxgzNmf6mpnmRtHrzhUthylyuoGTBYBQuxTKzkIHIRKfH-QrqK9zOrRNGaNicmhCSLd32pE0mymb4XpySRa1rrUS1ebqFUPh9duY3zk9kw8tt-ws99GtACqavc_BP6MkMQT8EMOQw7whxx3udmlOSvEhvNFjmQ6HDNin7hbazeXxPcFojbkVjSPfPHlGx9VMqYEb5YPDkadbEGvuSdis5bWme5Uq573H9ksbx0EMk3n_EPG_moKGoM1_OH1W5tiQOqKeejl_XVTGCSoQqNfFuHQWKIxaPfjAT7CpwlWL9cxlK4hEUfDEE-8yNxkPPWLTaTfjGK6-TW0feeMq5stpbKdnGhMFXZ4ooU3NAWDpXNaBEPyoxFj5v3Evblj_2Jp1avBD1esfzf7Qo8fqoghHqIUd7uKCDh2Ox8P99-q0WUaaCdqef0NEHYoJC-M4XxZdGNjgFZROk3fF9vRY6JMG1qH_p9lWVNuA=w640-h320-no"
                         width="100" />
                 </label>
-                <img
-                    src="https://lh3.googleusercontent.com/AXvIr-Yku83dsPvEPnbCgeA7vyRp-bdQtg7XCSwpyqaAgIhyRfz3lVDnvjr2s8565YjAIBIe46WdssbQW-rVwE4Dvuus4tp3RQd_-LxyfZgG5pijE_e8bcXmmWoUUPTvfougVnTsUMnfUXhf2UtlGeRPwInpeMKg7uOqc1yZjHN-IchMxQq8qwY_sKbra8SHMzK8UMj95p8QMffwk9wn8HCNrxgzNmf6mpnmRtHrzhUthylyuoGTBYBQuxTKzkIHIRKfH-QrqK9zOrRNGaNicmhCSLd32pE0mymb4XpySRa1rrUS1ebqFUPh9duY3zk9kw8tt-ws99GtACqavc_BP6MkMQT8EMOQw7whxx3udmlOSvEhvNFjmQ6HDNin7hbazeXxPcFojbkVjSPfPHlGx9VMqYEb5YPDkadbEGvuSdis5bWme5Uq573H9ksbx0EMk3n_EPG_moKGoM1_OH1W5tiQOqKeejl_XVTGCSoQqNfFuHQWKIxaPfjAT7CpwlWL9cxlK4hEUfDEE-8yNxkPPWLTaTfjGK6-TW0feeMq5stpbKdnGhMFXZ4ooU3NAWDpXNaBEPyoxFj5v3Evblj_2Jp1avBD1esfzf7Qo8fqoghHqIUd7uKCDh2Ox8P99-q0WUaaCdqef0NEHYoJC-M4XxZdGNjgFZROk3fF9vRY6JMG1qH_p9lWVNuA=w640-h320-no" />
+                <img src="https://lh3.googleusercontent.com/AXvIr-Yku83dsPvEPnbCgeA7vyRp-bdQtg7XCSwpyqaAgIhyRfz3lVDnvjr2s8565YjAIBIe46WdssbQW-rVwE4Dvuus4tp3RQd_-LxyfZgG5pijE_e8bcXmmWoUUPTvfougVnTsUMnfUXhf2UtlGeRPwInpeMKg7uOqc1yZjHN-IchMxQq8qwY_sKbra8SHMzK8UMj95p8QMffwk9wn8HCNrxgzNmf6mpnmRtHrzhUthylyuoGTBYBQuxTKzkIHIRKfH-QrqK9zOrRNGaNicmhCSLd32pE0mymb4XpySRa1rrUS1ebqFUPh9duY3zk9kw8tt-ws99GtACqavc_BP6MkMQT8EMOQw7whxx3udmlOSvEhvNFjmQ6HDNin7hbazeXxPcFojbkVjSPfPHlGx9VMqYEb5YPDkadbEGvuSdis5bWme5Uq573H9ksbx0EMk3n_EPG_moKGoM1_OH1W5tiQOqKeejl_XVTGCSoQqNfFuHQWKIxaPfjAT7CpwlWL9cxlK4hEUfDEE-8yNxkPPWLTaTfjGK6-TW0feeMq5stpbKdnGhMFXZ4ooU3NAWDpXNaBEPyoxFj5v3Evblj_2Jp1avBD1esfzf7Qo8fqoghHqIUd7uKCDh2Ox8P99-q0WUaaCdqef0NEHYoJC-M4XxZdGNjgFZROk3fF9vRY6JMG1qH_p9lWVNuA=w640-h320-no"
+                />
 
 
                 <!-- We will use PrefixFree - a script that takes care of CSS3 vendor prefixes
