--- a/NorseHTML/loki.html
+++ b/NorseHTML/loki.html
@@ -7,20 +7,15 @@
     <title>Loki</title>
     <link rel="stylesheet" href="loki.css">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
     <link href="https://fonts.googleapis.com/css?family=Sriracha&display=swap" rel="stylesheet">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Neucha' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Kanit&display=swap" rel="stylesheet">
@@ -34,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto pl-5">
                     <li class="nav-item">
-                        <a class="nav-link" href="#history"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">ประวัติ</a>
+                        <a class="nav-link" href="#history">ประวัติ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#pics"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">รูปภาพ</a>
+                        <a class="nav-link" href="#pics">รูปภาพ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../ChooseHTML/NorseC.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">เทพเจ้านอร์ส</a>
+                        <a class="nav-link" href="../ChooseHTML/NorseC.html">เทพเจ้านอร์ส</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="../index.html"style="padding-left: 40px;font-size: 20px;font-family: 'Kanit', sans-serif;">หน้าแรก</a>
+                        <a class="nav-link " href="../index.html">หน้าแรก</a>
                     </li>
                 </ul>
             </div>
@@ -64,20 +59,10 @@
             <img src="../Full-Design/Odin1.jpg" class="img-fluid">
             <div class="container-fluid">
                 <div class="boxtext1">
-                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Loki</b> เป็นเทพเกเรในเทพปกรณัมนอร์ส
-                        โลกิมีความขี้เล่นและซุกซน
-                        ในช่วงแรกนั้นโลกิได้ช่วยเหลือเหล่าเทพแห่งแอสการ์ดในการต่อสู้กับเหล่ายักษ์
-                        แต่เมื่อเวลาผ่านไป ความซุกซนของโลกิก็ยิ่งกลายเป็นความโหดร้ายยิ่งขึ้น เทพโลกิมีบุตร 3 ตน คือ
-                        หมาป่าเฟนริล์ งูยักษ์มิดกาดโซรุม และเฮล เทวีแห่งอาณาจักรคนตาย ในวันแร็กนาร็อก วันสงครามสิ้นโลก
-                        บุตรทั้ง 3
-                        ของโลกิจะมีส่วนร่วมต่อสู้ในสงครามด้วย โลกิยังเป็นผู้ให้กำเนิดม้าสเลปนิร์ของโอดิน <br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;<b>โลกิ</b> เป็นผู้สังหารบัลเดอร์ เทพแห่งความสุข
-                        โดยใช้กิ่งของต้นมิสเซิลโท
-                        ซึ่งเป็นสิ่งเดียวที่ไม่เคยสาบานว่าจะไม่ทำร้ายบัลเดอร์
-                        ทำเป็นลูกดอกแล้วหลอกให้เทพฮอดผู้ตาบอดขว้างใส่บัลเดอร์ และเมื่อเทพเฮลมอดได้ไปตกลงกับเฮล
-                        ซึ่งจะยอมให้บัลเดอร์กลับจากยมโลกถ้าทุกชีวิตบนโลกร่ำไห้แก่บัลเดอร์นั้น นางยักษิณี ทอค
-                        ปฏิเสธที่จะร่ำไห้ตามคำขอร้องของแอนซัส ผู้ส่งสาร ซึ่งเชื่อว่าทอคนั้นก็คือโลกิปลอมตัวมานั่นเอง
-                        ซึ่งเหตุการนี้เป็นจุดเริ่มต้นที่ทำให้โลกิเป็นศัตรูกับเหล่าเทพแห่งแอสการ์ดและถูกจับล่ามโซ่ไว้จนถึงวันแร็กนาร็อก
+                    <p>&nbsp;&nbsp;&nbsp;&nbsp;<b>Loki</b> เป็นเทพเกเรในเทพปกรณัมนอร์ส โลกิมีความขี้เล่นและซุกซน ในช่วงแรกนั้นโลกิได้ช่วยเหลือเหล่าเทพแห่งแอสการ์ดในการต่อสู้กับเหล่ายักษ์ แต่เมื่อเวลาผ่านไป ความซุกซนของโลกิก็ยิ่งกลายเป็นความโหดร้ายยิ่งขึ้น
+                        เทพโลกิมีบุตร 3 ตน คือ หมาป่าเฟนริล์ งูยักษ์มิดกาดโซรุม และเฮล เทวีแห่งอาณาจักรคนตาย ในวันแร็กนาร็อก วันสงครามสิ้นโลก บุตรทั้ง 3 ของโลกิจะมีส่วนร่วมต่อสู้ในสงครามด้วย โลกิยังเป็นผู้ให้กำเนิดม้าสเลปนิร์ของโอดิน <br> &nbsp;&nbsp;&nbsp;&nbsp;
+                        <b>โลกิ</b> เป็นผู้สังหารบัลเดอร์ เทพแห่งความสุข โดยใช้กิ่งของต้นมิสเซิลโท ซึ่งเป็นสิ่งเดียวที่ไม่เคยสาบานว่าจะไม่ทำร้ายบัลเดอร์ ทำเป็นลูกดอกแล้วหลอกให้เทพฮอดผู้ตาบอดขว้างใส่บัลเดอร์ และเมื่อเทพเฮลมอดได้ไปตกลงกับเฮล ซึ่งจะยอมให้บัลเดอร์กลับจากยมโลกถ้าทุกชีวิตบนโลกร่ำไห้แก่บัลเดอร์นั้น
+                        นางยักษิณี ทอค ปฏิเสธที่จะร่ำไห้ตามคำขอร้องของแอนซัส ผู้ส่งสาร ซึ่งเชื่อว่าทอคนั้นก็คือโลกิปลอมตัวมานั่นเอง ซึ่งเหตุการนี้เป็นจุดเริ่มต้นที่ทำให้โลกิเป็นศัตรูกับเหล่าเทพแห่งแอสการ์ดและถูกจับล่ามโซ่ไว้จนถึงวันแร็กนาร็อก
                     </p>
                 </div>
             </div>
@@ -88,20 +73,9 @@
         <div class="container-fluid">
             <div class="boxtext2">
                 <p class="txtx" align="center"><b class="bold1">สรุปฉบับย่อ!!</b></p>
-                <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br>
-                    • เป็นลูกของยักษ์ไฟ มีผมสีแดง หน้าตาดี <br>
-                    • เป็นลูกพี่ลูกน้องห่างๆ ของโอดิน ต่อมาสาบานเป็นพี่น้องกับโอดินและได้เลื่อนขั้นเป็นเทพแอสการ์ด <br>
-                    • มีนิสัยชอบแกล้ง ชอบเล่นแผลงๆ เจ้าเล่ห์ เป็นตัวป่วนและชอบสร้างปัญหา <br>
-                    • มีเมีย2คนคือซิกกิน (Sigyn) และแองเกอร์โบดา (Angrboda) <br>
-                    • เป็นพ่อของเฮล เฟนรีร์และยอร์มุนกานดร์ <br>
-                    • เป็นแม่ของสเลปนีร์ <br>
-                    • มีลูกอีก 2 คนคือ นาวี (Narvi) กับวาลี (Vali) <br>
-                    • สามารถแปลงร่างได้ <br>
-                    • มีบทบาทสำคัญในการทำอาวุธและของวิเศษของเทพหลายๆองค์ <br>
-                    • เคยขโมยสร้อยของเฟรย่า/โกนผมเทพีซิฟ <br>
-                    • เป็นคนยืมมือเทพโฮเดอร์ฆ่าบัลเดอร์โดยใช้หอกมิซเซิลโท <br>
-                    • ถูกจับคุมขังในถ้ำแล้วให้พิษงูหยดใส่หน้า <br>
-                    • เมื่อถึงวันแร็คนาร็อคจะหลุดจากที่คุมขังแล้วนำทัพยักษ์เข้าสู้กับเหล่าเทพ </p>
+                <p><b>►ตามตำนานเทพเจ้านอร์ส◄</b><br> • เป็นลูกของยักษ์ไฟ มีผมสีแดง หน้าตาดี <br> • เป็นลูกพี่ลูกน้องห่างๆ ของโอดิน ต่อมาสาบานเป็นพี่น้องกับโอดินและได้เลื่อนขั้นเป็นเทพแอสการ์ด <br> • มีนิสัยชอบแกล้ง ชอบเล่นแผลงๆ เจ้าเล่ห์ เป็นตัวป่วนและชอบสร้างปัญหา
+                    <br> • มีเมีย2คนคือซิกกิน (Sigyn) และแองเกอร์โบดา (Angrboda) <br> • เป็นพ่อของเฮล เฟนรีร์และยอร์มุนกานดร์ <br> • เป็นแม่ของสเลปนีร์ <br> • มีลูกอีก 2 คนคือ นาวี (Narvi) กับวาลี (Vali) <br> • สามารถแปลงร่างได้ <br> • มีบทบาทสำคัญในการทำอาวุธและของวิเศษของเทพหลายๆองค์
+                    <br> • เคยขโมยสร้อยของเฟรย่า/โกนผมเทพีซิฟ <br> • เป็นคนยืมมือเทพโฮเดอร์ฆ่าบัลเดอร์โดยใช้หอกมิซเซิลโท <br> • ถูกจับคุมขังในถ้ำแล้วให้พิษงูหยดใส่หน้า <br> • เมื่อถึงวันแร็คนาร็อคจะหลุดจากที่คุมขังแล้วนำทัพยักษ์เข้าสู้กับเหล่าเทพ </p>
             </div>
         </div>
     </div>
